--- a/packages/15.html
+++ b/packages/15.html
@@ -223,350 +223,350 @@
               <td><a href="pool/main/g/gsettings-qt/libgsettings-qt1_0.2-5_amd64.deb">libgsettings-qt1</a></td>
               <td>0.2-5</td>
               <td>library to access GSettings from Qt (shared libraries)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libg/libgsm/libgsm1_1.0.22-1_amd64.deb">libgsm1</a></td>
               <td>1.0.22-1</td>
               <td>Shared libraries for GSM speech compressor</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/krb5/libgssapi-krb5-2_1.20.1-2+deb12u2_amd64.deb">libgssapi-krb5-2</a></td>
               <td>1.20.1-2+deb12u2</td>
               <td>MIT Kerberos runtime libraries - krb5 GSS-API Mechanism</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gssdp/libgssdp-1.6-0_1.6.2-2_amd64.deb">libgssdp-1.6-0</a></td>
               <td>1.6.2-2</td>
               <td>GObject-based library for SSDP</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gst-plugins-base1.0/libgstreamer-gl1.0-0_1.22.0-3+deb12u2_amd64.deb">libgstreamer-gl1.0-0</a></td>
               <td>1.22.0-3+deb12u2</td>
               <td>GStreamer GL libraries</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gst-plugins-bad1.0/libgstreamer-plugins-bad1.0-0_1.22.0-4+deb12u5_amd64.deb">libgstreamer-plugins-bad1.0-0</a></td>
               <td>1.22.0-4+deb12u5</td>
               <td>GStreamer libraries from the "bad" set</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gst-plugins-base1.0/libgstreamer-plugins-base1.0-0_1.22.0-3+deb12u2_amd64.deb">libgstreamer-plugins-base1.0-0</a></td>
               <td>1.22.0-3+deb12u2</td>
               <td>GStreamer libraries from the "base" set</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gstreamer1.0/libgstreamer1.0-0_1.22.0-2_amd64.deb">libgstreamer1.0-0</a></td>
               <td>1.22.0-2</td>
               <td>Core GStreamer libraries and elements</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gtk+3.0/libgtk-3-0_3.24.38-2~deb12u2_amd64.deb">libgtk-3-0</a></td>
               <td>3.24.38-2~deb12u2</td>
               <td>GTK graphical user interface library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gtk+3.0/libgtk-3-bin_3.24.38-2~deb12u2_amd64.deb">libgtk-3-bin</a></td>
               <td>3.24.38-2~deb12u2</td>
               <td>programs for the GTK graphical user interface library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/g/gtk+3.0/libgtk-3-common_3.24.38-2~deb12u2_all.deb">libgtk-3-common</a></td>
               <td>3.24.38-2~deb12u2</td>
               <td>common files for the GTK graphical user interface library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gtk4/libgtk-4-1_4.8.3+ds-2+deb12u1_amd64.deb">libgtk-4-1</a></td>
               <td>4.8.3+ds-2+deb12u1</td>
               <td>GTK graphical user interface library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gtk4/libgtk-4-bin_4.8.3+ds-2+deb12u1_amd64.deb">libgtk-4-bin</a></td>
               <td>4.8.3+ds-2+deb12u1</td>
               <td>programs for the GTK graphical user interface library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/g/gtk4/libgtk-4-common_4.8.3+ds-2+deb12u1_all.deb">libgtk-4-common</a></td>
               <td>4.8.3+ds-2+deb12u1</td>
               <td>common files for the GTK graphical user interface library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gtk+2.0/libgtk2.0-0_2.24.33-2+deb12u1_amd64.deb">libgtk2.0-0</a></td>
               <td>2.24.33-2+deb12u1</td>
               <td>GTK graphical user interface library - old version</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gtk+2.0/libgtk2.0-bin_2.24.33-2+deb12u1_amd64.deb">libgtk2.0-bin</a></td>
               <td>2.24.33-2+deb12u1</td>
               <td>programs for the GTK graphical user interface library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/g/gtk+2.0/libgtk2.0-common_2.24.33-2+deb12u1_all.deb">libgtk2.0-common</a></td>
               <td>2.24.33-2+deb12u1</td>
               <td>common files for the GTK graphical user interface library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gtkmm3.0/libgtkmm-3.0-1v5_3.24.7-1_amd64.deb">libgtkmm-3.0-1v5</a></td>
               <td>3.24.7-1</td>
               <td>C++ wrappers for GTK+ (shared libraries)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libg/libgudev/libgudev-1.0-0_237-2_amd64.deb">libgudev-1.0-0</a></td>
               <td>237-2</td>
               <td>GObject-based wrapper library for libudev</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gupnp/libgupnp-1.6-0_1.6.3-1_amd64.deb">libgupnp-1.6-0</a></td>
               <td>1.6.3-1</td>
               <td>GObject-based library for UPnP</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gupnp-igd/libgupnp-igd-1.0-4_1.2.0-3_amd64.deb">libgupnp-igd-1.0-4</a></td>
               <td>1.2.0-3</td>
               <td>library to handle UPnP IGD port mapping</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libg/libgusb/libgusb2_0.3.10-1_amd64.deb">libgusb2</a></td>
               <td>0.3.10-1</td>
               <td>GLib wrapper around libusb1</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libh/libhandy-1/libhandy-1-0_1.8.1-1_amd64.deb">libhandy-1-0</a></td>
               <td>1.8.1-1</td>
               <td>Library with GTK widgets for mobile phones</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/h/harfbuzz/libharfbuzz-subset0_6.0.0+dfsg-3_amd64.deb">libharfbuzz-subset0</a></td>
               <td>6.0.0+dfsg-3</td>
               <td>OpenType text shaping engine (subset library)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/h/harfbuzz/libharfbuzz0b_6.0.0+dfsg-3_amd64.deb">libharfbuzz0b</a></td>
               <td>6.0.0+dfsg-3</td>
               <td>OpenType text shaping engine (shared library)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/h/haveged/libhavege2_1.9.14-1+b1_amd64.deb">libhavege2</a></td>
               <td>1.9.14-1+b1</td>
               <td>entropy source using the HAVEGE algorithm - shared library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libh/libheif/libheif1_1.15.1-1_amd64.deb">libheif1</a></td>
               <td>1.15.1-1</td>
               <td>ISO/IEC 23008-12:2017 HEIF file format decoder - shared library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/h/hfsplus/libhfsp0_1.0.4-17_amd64.deb">libhfsp0</a></td>
               <td>1.0.4-17</td>
               <td>Shared library to access HFS+ formatted volumes</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/h/hfst-ospell/libhfstospell11_0.5.3-1+b2_amd64.deb">libhfstospell11</a></td>
               <td>0.5.3-1+b2</td>
               <td>HFST spell checker runtime libraries</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/n/nettle/libhogweed6_3.8.1-2_amd64.deb">libhogweed6</a></td>
               <td>3.8.1-2</td>
               <td>low level cryptographic library (public-key cryptos)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/libh/libhtml-form-perl/libhtml-form-perl_6.11-1_all.deb">libhtml-form-perl</a></td>
               <td>6.11-1</td>
               <td>module that represents an HTML form element</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/libh/libhtml-format-perl/libhtml-format-perl_2.16-2_all.deb">libhtml-format-perl</a></td>
               <td>2.16-2</td>
               <td>module for transforming HTML into various formats</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libh/libhtml-parser-perl/libhtml-parser-perl_3.81-1_amd64.deb">libhtml-parser-perl</a></td>
               <td>3.81-1</td>
               <td>collection of modules that parse HTML text documents</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/libh/libhtml-tagset-perl/libhtml-tagset-perl_3.20-6_all.deb">libhtml-tagset-perl</a></td>
               <td>3.20-6</td>
               <td>data tables pertaining to HTML</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/libh/libhtml-tree-perl/libhtml-tree-perl_5.07-3_all.deb">libhtml-tree-perl</a></td>
               <td>5.07-3</td>
               <td>Perl module to represent and create HTML syntax trees</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/libh/libhttp-cookies-perl/libhttp-cookies-perl_6.10-1_all.deb">libhttp-cookies-perl</a></td>
               <td>6.10-1</td>
               <td>HTTP cookie jars</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/libh/libhttp-daemon-perl/libhttp-daemon-perl_6.16-1_all.deb">libhttp-daemon-perl</a></td>
               <td>6.16-1</td>
               <td>simple http server class</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/libh/libhttp-date-perl/libhttp-date-perl_6.05-2_all.deb">libhttp-date-perl</a></td>
               <td>6.05-2</td>
               <td>module of date conversion routines</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/libh/libhttp-message-perl/libhttp-message-perl_6.44-1_all.deb">libhttp-message-perl</a></td>
               <td>6.44-1</td>
               <td>perl interface to HTTP style messages</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/libh/libhttp-negotiate-perl/libhttp-negotiate-perl_6.01-2_all.deb">libhttp-negotiate-perl</a></td>
               <td>6.01-2</td>
               <td>implementation of content negotiation</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/h/http-parser/libhttp-parser2.9_2.9.4-5_amd64.deb">libhttp-parser2.9</a></td>
               <td>2.9.4-5</td>
               <td>parser for HTTP messages written in C</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/h/hunspell/libhunspell-1.7-0_1.7.1-1_amd64.deb">libhunspell-1.7-0</a></td>
               <td>1.7.1-1</td>
               <td>spell checker and morphological analyzer (shared library)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/h/highway/libhwy1_1.0.3-3+deb12u1_amd64.deb">libhwy1</a></td>
               <td>1.0.3-3+deb12u1</td>
               <td>Efficient and performance-portable SIMD wrapper (runtime files)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/h/hyphen/libhyphen0_2.8.8-7_amd64.deb">libhyphen0</a></td>
               <td>2.8.8-7</td>
               <td>ALTLinux hyphenation library - shared library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/i/ibus/libibus-1.0-5_1.5.27-5_amd64.deb">libibus-1.0-5</a></td>
               <td>1.5.27-5</td>
               <td>Intelligent Input Bus - shared library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libi/libical3/libical3_3.0.16-1+b1_amd64.deb">libical3</a></td>
               <td>3.0.16-1+b1</td>
               <td>iCalendar library implementation in C (runtime)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libi/libice/libice6_1.0.10-1_amd64.deb">libice6</a></td>
               <td>2:1.0.10-1</td>
               <td>X11 Inter-Client Exchange library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/i/icu/libicu72_72.1-3_amd64.deb">libicu72</a></td>
               <td>72.1-3</td>
               <td>International Components for Unicode</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libi/libidn/libidn12_1.41-1_amd64.deb">libidn12</a></td>
               <td>1.41-1</td>
               <td>GNU Libidn library, implementation of IETF IDN specifications</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libi/libidn2/libidn2-0_2.3.3-1+b1_amd64.deb">libidn2-0</a></td>
               <td>2.3.3-1+b1</td>
               <td>Internationalized domain names (IDNA2008/TR46) library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
 
         </tbody>
@@ -648,10 +648,10 @@
     <section id="sponsor">
       <div class="sponsor">
         <div class="linija-dole mb-1"></div>
-        <p style="letter-spacing:1px;" class="pb-1 pt-1 text-white text-center">{{ site.data.strings.footnote-dev | replace: '[OpenBosniana OS]', '
-													<a href="##">OpenBosniana OS</a>' | replace: '[bosniana.org]', '
-													<a href="##">bosniana.org</a>' | replace: '[Denis Maslo]', '
-													<a href="##">Denis Maslo</a>' }}
+        <p style="letter-spacing:1px;" class="pb-1 pt-1 text-white text-center">
+													<a href="##">OpenBosniana OS</a> and
+													<a href="##">bosniana.org</a> developed by:
+													<a href="##">Denis Maslo</a>
         </p>
 
         <p style="letter-spacing:1px;" class="pb-1 pt-1 text-white text-center"><i class="ri-mail-send-line"></i> Private email:
