--- a/packages/18.html
+++ b/packages/18.html
@@ -223,350 +223,350 @@
               <td><a href="pool/main/k/kguiaddons/libkf5guiaddons-bin_5.103.0-1_amd64.deb">libkf5guiaddons-bin</a></td>
               <td>5.103.0-1</td>
               <td>additional addons for QtGui</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/k/kguiaddons/libkf5guiaddons-data_5.103.0-1_all.deb">libkf5guiaddons-data</a></td>
               <td>5.103.0-1</td>
               <td>additional addons for QtGui</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kguiaddons/libkf5guiaddons5_5.103.0-1_amd64.deb">libkf5guiaddons5</a></td>
               <td>5.103.0-1</td>
               <td>additional addons for QtGui</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/k/kholidays/libkf5holidays-data_5.103.0-1_all.deb">libkf5holidays-data</a></td>
               <td>1:5.103.0-1</td>
               <td>holidays calculation library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kholidays/libkf5holidays5_5.103.0-1_amd64.deb">libkf5holidays5</a></td>
               <td>1:5.103.0-1</td>
               <td>holidays calculation library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/k/ki18n/libkf5i18n-data_5.103.0-1_all.deb">libkf5i18n-data</a></td>
               <td>5.103.0-1</td>
               <td>Advanced internationalization framework.</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/ki18n/libkf5i18n5_5.103.0-1_amd64.deb">libkf5i18n5</a></td>
               <td>5.103.0-1</td>
               <td>Advanced internationalization framework.</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/ki18n/libkf5i18nlocaledata5_5.103.0-1_amd64.deb">libkf5i18nlocaledata5</a></td>
               <td>5.103.0-1</td>
               <td>Advanced internationalization framework (locale data)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kiconthemes/libkf5iconthemes-bin_5.103.0-1_amd64.deb">libkf5iconthemes-bin</a></td>
               <td>5.103.0-1</td>
               <td>Support for icon themes</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/k/kiconthemes/libkf5iconthemes-data_5.103.0-1_all.deb">libkf5iconthemes-data</a></td>
               <td>5.103.0-1</td>
               <td>Support for icon themes.</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kiconthemes/libkf5iconthemes5_5.103.0-1_amd64.deb">libkf5iconthemes5</a></td>
               <td>5.103.0-1</td>
               <td>Support for icon themes.</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kidletime/libkf5idletime5_5.103.0-2_amd64.deb">libkf5idletime5</a></td>
               <td>5.103.0-2</td>
               <td>library to provide information about idle time</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kitemmodels/libkf5itemmodels5_5.103.0-1_amd64.deb">libkf5itemmodels5</a></td>
               <td>5.103.0-1</td>
               <td>additional item/view models for Qt Itemview</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/k/kitemviews/libkf5itemviews-data_5.103.0-1_all.deb">libkf5itemviews-data</a></td>
               <td>5.103.0-1</td>
               <td>Qt library with additional widgets for ItemModels</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kitemviews/libkf5itemviews5_5.103.0-1_amd64.deb">libkf5itemviews5</a></td>
               <td>5.103.0-1</td>
               <td>Qt library with additional widgets for ItemModels</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/k/kjobwidgets/libkf5jobwidgets-data_5.103.0-1_all.deb">libkf5jobwidgets-data</a></td>
               <td>5.103.0-1</td>
               <td>Widgets for tracking KJob instances</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kjobwidgets/libkf5jobwidgets5_5.103.0-1_amd64.deb">libkf5jobwidgets5</a></td>
               <td>5.103.0-1</td>
               <td>Widgets for tracking KJob instances</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kjs/libkf5js5_5.103.0-1_amd64.deb">libkf5js5</a></td>
               <td>5.103.0-1</td>
               <td>Support for JS scripting in Qt applications</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kjs/libkf5jsapi5_5.103.0-1_amd64.deb">libkf5jsapi5</a></td>
               <td>5.103.0-1</td>
               <td>Support for JS scripting in Qt applications</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kcmutils/libkf5kcmutils-bin_5.103.0-3_amd64.deb">libkf5kcmutils-bin</a></td>
               <td>5.103.0-3</td>
               <td>runtime files for kcmutils</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/k/kcmutils/libkf5kcmutils-data_5.103.0-3_all.deb">libkf5kcmutils-data</a></td>
               <td>5.103.0-3</td>
               <td>Extra APIs to write KConfig modules</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kcmutils/libkf5kcmutils5_5.103.0-3_amd64.deb">libkf5kcmutils5</a></td>
               <td>5.103.0-3</td>
               <td>Extra APIs to write KConfig modules</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kcmutils/libkf5kcmutilscore5_5.103.0-3_amd64.deb">libkf5kcmutilscore5</a></td>
               <td>5.103.0-3</td>
               <td>Extra APIs to write KConfig modules</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libk/libkf5kdcraw/libkf5kdcraw5_22.12.3-1_amd64.deb">libkf5kdcraw5</a></td>
               <td>22.12.3-1</td>
               <td>RAW picture decoding library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/k/kdelibs4support/libkf5kdelibs4support-data_5.103.0-1_all.deb">libkf5kdelibs4support-data</a></td>
               <td>5.103.0-1</td>
               <td>Porting aid from KDELibs4.</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kdelibs4support/libkf5kdelibs4support5_5.103.0-1_amd64.deb">libkf5kdelibs4support5</a></td>
               <td>5.103.0-1</td>
               <td>Porting aid from KDELibs4.</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kdelibs4support/libkf5kdelibs4support5-bin_5.103.0-1_amd64.deb">libkf5kdelibs4support5-bin</a></td>
               <td>5.103.0-1</td>
               <td>Porting aid from KDELibs4.</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libk/libkf5kexiv2/libkf5kexiv2-15.0.0_22.12.3-1_amd64.deb">libkf5kexiv2-15.0.0</a></td>
               <td>22.12.3-1</td>
               <td>Qt like interface for the libexiv2 library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/khtml/libkf5khtml-bin_5.103.0-1_amd64.deb">libkf5khtml-bin</a></td>
               <td>5.103.0-1</td>
               <td>HTML widget and component</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/k/khtml/libkf5khtml-data_5.103.0-1_all.deb">libkf5khtml-data</a></td>
               <td>5.103.0-1</td>
               <td>HTML widget and component</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/khtml/libkf5khtml5_5.103.0-1_amd64.deb">libkf5khtml5</a></td>
               <td>5.103.0-1</td>
               <td>HTML widget and component</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kio/libkf5kiocore5_5.103.0-1+deb12u1_amd64.deb">libkf5kiocore5</a></td>
               <td>5.103.0-1+deb12u1</td>
               <td>resource and network access abstraction (KIO core library)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kio/libkf5kiofilewidgets5_5.103.0-1+deb12u1_amd64.deb">libkf5kiofilewidgets5</a></td>
               <td>5.103.0-1+deb12u1</td>
               <td>resource and network access abstraction (KIO file widgets library)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kio/libkf5kiogui5_5.103.0-1+deb12u1_amd64.deb">libkf5kiogui5</a></td>
               <td>5.103.0-1+deb12u1</td>
               <td>resource and network access abstraction (KIO gui library)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kio/libkf5kiontlm5_5.103.0-1+deb12u1_amd64.deb">libkf5kiontlm5</a></td>
               <td>5.103.0-1+deb12u1</td>
               <td>resource and network access abstraction (KIO NTLM library)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kio/libkf5kiowidgets5_5.103.0-1+deb12u1_amd64.deb">libkf5kiowidgets5</a></td>
               <td>5.103.0-1+deb12u1</td>
               <td>resource and network access abstraction (KIO widgets library)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kirigami2/libkf5kirigami2-5_5.103.0-1_amd64.deb">libkf5kirigami2-5</a></td>
               <td>5.103.0-1</td>
               <td>set of QtQuick components targeted for mobile use</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/konqueror/libkf5konq6_22.12.3-1_amd64.deb">libkf5konq6</a></td>
               <td>4:22.12.3-1</td>
               <td>core libraries for Konqueror</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/m/modemmanager-qt/libkf5modemmanagerqt6_5.103.0-1_amd64.deb">libkf5modemmanagerqt6</a></td>
               <td>5.103.0-1</td>
               <td>Qt wrapper library for ModemManager</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/n/networkmanager-qt/libkf5networkmanagerqt6_5.103.0-1_amd64.deb">libkf5networkmanagerqt6</a></td>
               <td>5.103.0-1</td>
               <td>Qt wrapper for NetworkManager - library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/k/knewstuff/libkf5newstuff-data_5.103.0-1_all.deb">libkf5newstuff-data</a></td>
               <td>5.103.0-1</td>
               <td>Support for downloading application assets from the network.</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/knewstuff/libkf5newstuff5_5.103.0-1_amd64.deb">libkf5newstuff5</a></td>
               <td>5.103.0-1</td>
               <td>Support for downloading application assets from the network.</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/knewstuff/libkf5newstuffcore5_5.103.0-1_amd64.deb">libkf5newstuffcore5</a></td>
               <td>5.103.0-1</td>
               <td>Support for downloading application assets from the network.</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/knewstuff/libkf5newstuffwidgets5_5.103.0-1_amd64.deb">libkf5newstuffwidgets5</a></td>
               <td>5.103.0-1</td>
               <td>Support for downloading application assets from the network.</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/k/knotifications/libkf5notifications-data_5.103.0-1_all.deb">libkf5notifications-data</a></td>
               <td>5.103.0-1</td>
               <td>Framework for desktop notifications</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/knotifications/libkf5notifications5_5.103.0-1_amd64.deb">libkf5notifications5</a></td>
               <td>5.103.0-1</td>
               <td>Framework for desktop notifications</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/k/knotifyconfig/libkf5notifyconfig-data_5.103.0-1_all.deb">libkf5notifyconfig-data</a></td>
               <td>5.103.0-1</td>
               <td>Configuration system for KNotify.</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/knotifyconfig/libkf5notifyconfig5_5.103.0-1_amd64.deb">libkf5notifyconfig5</a></td>
               <td>5.103.0-1</td>
               <td>Configuration system for KNotify.</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/k/kpackage/libkf5package-data_5.103.0-1_all.deb">libkf5package-data</a></td>
               <td>5.103.0-1</td>
               <td>non-binary asset management framework</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kpackage/libkf5package5_5.103.0-1_amd64.deb">libkf5package5</a></td>
               <td>5.103.0-1</td>
               <td>non-binary asset management framework</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
 
         </tbody>
@@ -648,10 +648,10 @@
     <section id="sponsor">
       <div class="sponsor">
         <div class="linija-dole mb-1"></div>
-        <p style="letter-spacing:1px;" class="pb-1 pt-1 text-white text-center">{{ site.data.strings.footnote-dev | replace: '[OpenBosniana OS]', '
-													<a href="##">OpenBosniana OS</a>' | replace: '[bosniana.org]', '
-													<a href="##">bosniana.org</a>' | replace: '[Denis Maslo]', '
-													<a href="##">Denis Maslo</a>' }}
+        <p style="letter-spacing:1px;" class="pb-1 pt-1 text-white text-center">
+													<a href="##">OpenBosniana OS</a> and
+													<a href="##">bosniana.org</a> developed by:
+													<a href="##">Denis Maslo</a>
         </p>
 
         <p style="letter-spacing:1px;" class="pb-1 pt-1 text-white text-center"><i class="ri-mail-send-line"></i> Private email:
