--- a/packages/22.html
+++ b/packages/22.html
@@ -223,350 +223,350 @@
               <td><a href="pool/main/n/ncurses/libncursesw6_6.4-4_amd64.deb">libncursesw6</a></td>
               <td>6.4-4</td>
               <td>shared libraries for terminal handling (wide character support)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libn/libndp/libndp0_1.8-1+deb12u1_amd64.deb">libndp0</a></td>
               <td>1.8-1+deb12u1</td>
               <td>Library for Neighbor Discovery Protocol</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/n/neon27/libneon27_0.32.5-1_amd64.deb">libneon27</a></td>
               <td>0.32.5-1</td>
               <td>HTTP and WebDAV client library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libn/libnet-dbus-perl/libnet-dbus-perl_1.2.0-2_amd64.deb">libnet-dbus-perl</a></td>
               <td>1.2.0-2</td>
               <td>Perl extension for the DBus bindings</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/libn/libnet-http-perl/libnet-http-perl_6.22-1_all.deb">libnet-http-perl</a></td>
               <td>6.22-1</td>
               <td>module providing low-level HTTP connection client</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/libn/libnet-smtp-ssl-perl/libnet-smtp-ssl-perl_1.04-2_all.deb">libnet-smtp-ssl-perl</a></td>
               <td>1.04-2</td>
               <td>Perl module providing SSL support to Net::SMTP</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libn/libnet-ssleay-perl/libnet-ssleay-perl_1.92-2+b1_amd64.deb">libnet-ssleay-perl</a></td>
               <td>1.92-2+b1</td>
               <td>Perl module for Secure Sockets Layer (SSL)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libn/libnetfilter-conntrack/libnetfilter-conntrack3_1.0.9-3_amd64.deb">libnetfilter-conntrack3</a></td>
               <td>1.0.9-3</td>
               <td>Netfilter netlink-conntrack library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/n/nettle/libnettle8_3.8.1-2_amd64.deb">libnettle8</a></td>
               <td>3.8.1-2</td>
               <td>low level cryptographic library (symmetric and one-way cryptos)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/n/newt/libnewt0.52_0.52.23-1+b1_amd64.deb">libnewt0.52</a></td>
               <td>0.52.23-1+b1</td>
               <td>Not Erik's Windowing Toolkit - text mode windowing with slang</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libn/libnfnetlink/libnfnetlink0_1.0.2-2_amd64.deb">libnfnetlink0</a></td>
               <td>1.0.2-2</td>
               <td>Netfilter netlink library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libn/libnfs/libnfs13_4.0.0-1_amd64.deb">libnfs13</a></td>
               <td>4.0.0-1</td>
               <td>NFS client library (shared library)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/n/nftables/libnftables1_1.0.6-2+deb12u2_amd64.deb">libnftables1</a></td>
               <td>1.0.6-2+deb12u2</td>
               <td>Netfilter nftables high level userspace API library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libn/libnftnl/libnftnl11_1.2.4-2_amd64.deb">libnftnl11</a></td>
               <td>1.2.4-2</td>
               <td>Netfilter nftables userspace API library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/n/nghttp2/libnghttp2-14_1.52.0-1+deb12u1_amd64.deb">libnghttp2-14</a></td>
               <td>1.52.0-1+deb12u1</td>
               <td>library implementing HTTP/2 protocol (shared library)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libn/libnice/libnice10_0.1.21-1_amd64.deb">libnice10</a></td>
               <td>0.1.21-1</td>
               <td>ICE library (shared library)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libn/libnl3/libnl-3-200_3.7.0-0.2+b1_amd64.deb">libnl-3-200</a></td>
               <td>3.7.0-0.2+b1</td>
               <td>library for dealing with netlink sockets</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libn/libnl3/libnl-genl-3-200_3.7.0-0.2+b1_amd64.deb">libnl-genl-3-200</a></td>
               <td>3.7.0-0.2+b1</td>
               <td>library for dealing with netlink sockets - generic netlink</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libn/libnl3/libnl-route-3-200_3.7.0-0.2+b1_amd64.deb">libnl-route-3-200</a></td>
               <td>3.7.0-0.2+b1</td>
               <td>library for dealing with netlink sockets - route interface</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/n/network-manager/libnm0_1.42.4-1_amd64.deb">libnm0</a></td>
               <td>1.42.4-1</td>
               <td>GObject-based client library for NetworkManager</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/n/nodejs/libnode-dev_18.19.0+dfsg-6~deb12u2_amd64.deb">libnode-dev</a></td>
               <td>18.19.0+dfsg-6~deb12u2</td>
               <td>evented I/O for V8 javascript (development files)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/n/nodejs/libnode108_18.19.0+dfsg-6~deb12u2_amd64.deb">libnode108</a></td>
               <td>18.19.0+dfsg-6~deb12u2</td>
               <td>evented I/O for V8 javascript - runtime library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/n/norm/libnorm1_1.5.9+dfsg-2_amd64.deb">libnorm1</a></td>
               <td>1.5.9+dfsg-2</td>
               <td>NACK-Oriented Reliable Multicast (NORM) library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/plasma-workspace/libnotificationmanager1_5.27.5-2+deb12u2_amd64.deb">libnotificationmanager1</a></td>
               <td>4:5.27.5-2+deb12u2</td>
               <td>Plasma Workspace for KF5 library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libn/libnotify/libnotify-bin_0.8.1-1_amd64.deb">libnotify-bin</a></td>
               <td>0.8.1-1</td>
               <td>sends desktop notifications to a notification daemon (Utilities)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libn/libnotify/libnotify4_0.8.1-1_amd64.deb">libnotify4</a></td>
               <td>0.8.1-1</td>
               <td>sends desktop notifications to a notification daemon</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/n/npth/libnpth0_1.6-3_amd64.deb">libnpth0</a></td>
               <td>1.6-3</td>
               <td>replacement for GNU Pth using system threads</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libn/libnsl/libnsl-dev_1.3.0-2_amd64.deb">libnsl-dev</a></td>
               <td>1.3.0-2</td>
               <td>libnsl development files</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libn/libnsl/libnsl2_1.3.0-2_amd64.deb">libnsl2</a></td>
               <td>1.3.0-2</td>
               <td>Public client interface for NIS(YP) and NIS+</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/n/nspr/libnspr4_4.35-1_amd64.deb">libnspr4</a></td>
               <td>2:4.35-1</td>
               <td>NetScape Portable Runtime Library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libn/libnss-db/libnss-db_2.2.3pre1-8_amd64.deb">libnss-db</a></td>
               <td>2.2.3pre1-8</td>
               <td>NSS module for using Berkeley Databases as a naming service</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/n/nss-mdns/libnss-mdns_0.15.1-3_amd64.deb">libnss-mdns</a></td>
               <td>0.15.1-3</td>
               <td>NSS module for Multicast DNS name resolution</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/s/systemd/libnss-systemd_252.30-1~deb12u2_amd64.deb">libnss-systemd</a></td>
               <td>252.30-1~deb12u2</td>
               <td>nss module providing dynamic user and group name resolution</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/n/nss/libnss3_3.87.1-1_amd64.deb">libnss3</a></td>
               <td>2:3.87.1-1</td>
               <td>Network Security Service libraries</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/n/ntfs-3g/libntfs-3g89_2022.10.3-1+b1_amd64.deb">libntfs-3g89</a></td>
               <td>1:2022.10.3-1+b1</td>
               <td>read/write NTFS driver for FUSE (runtime library)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/n/numactl/libnuma1_2.0.16-1_amd64.deb">libnuma1</a></td>
               <td>2.0.16-1</td>
               <td>Libraries for controlling NUMA policy</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libo/libogg/libogg0_1.3.5-3_amd64.deb">libogg0</a></td>
               <td>1.3.5-3</td>
               <td>Ogg bitstream library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/o/okular/libokular5core10_22.12.3-1_amd64.deb">libokular5core10</a></td>
               <td>4:22.12.3-1</td>
               <td>libraries for the Okular document viewer</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libo/libonig/libonig5_6.9.8-1_amd64.deb">libonig5</a></td>
               <td>6.9.8-1</td>
               <td>regular expressions library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/o/openal-soft/libopenal-data_1.19.1-2_all.deb">libopenal-data</a></td>
               <td>1:1.19.1-2</td>
               <td>Software implementation of the OpenAL audio API (data files)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/o/openal-soft/libopenal1_1.19.1-2_amd64.deb">libopenal1</a></td>
               <td>1:1.19.1-2</td>
               <td>Software implementation of the OpenAL audio API (shared library)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/o/openconnect/libopenconnect5_9.01-3_amd64.deb">libopenconnect5</a></td>
               <td>9.01-3</td>
               <td>open client for various network vendors SSL VPNs - shared library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/o/openexr/libopenexr-3-1-30_3.1.5-5_amd64.deb">libopenexr-3-1-30</a></td>
               <td>3.1.5-5</td>
               <td>runtime files for the OpenEXR image library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libg/libglvnd/libopengl0_1.6.0-1_amd64.deb">libopengl0</a></td>
               <td>1.6.0-1</td>
               <td>Vendor neutral GL dispatch library -- OpenGL support</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/o/openh264/libopenh264-7_2.3.1+dfsg-3_amd64.deb">libopenh264-7</a></td>
               <td>2.3.1+dfsg-3</td>
               <td>OpenH264 Video Codec</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/o/openjpeg2/libopenjp2-7_2.5.0-2_amd64.deb">libopenjp2-7</a></td>
               <td>2.5.0-2</td>
               <td>JPEG 2000 image compression/decompression library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libo/libopenmpt-modplug/libopenmpt-modplug1_0.8.9.0-openmpt1-2+b1_amd64.deb">libopenmpt-modplug1</a></td>
               <td>0.8.9.0-openmpt1-2+b1</td>
               <td>module music library based on OpenMPT -- modplug compat library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libo/libopenmpt/libopenmpt0_0.6.9-1_amd64.deb">libopenmpt0</a></td>
               <td>0.6.9-1</td>
               <td>module music library based on OpenMPT -- shared library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/o/openni2/libopenni2-0_2.2.0.33+dfsg-15+b1_amd64.deb">libopenni2-0</a></td>
               <td>2.2.0.33+dfsg-15+b1</td>
               <td>framework for sensor-based 'Natural Interaction'</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/o/opus/libopus0_1.3.1-3_amd64.deb">libopus0</a></td>
               <td>1.3.1-3</td>
               <td>Opus codec runtime library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
 
         </tbody>
@@ -648,10 +648,10 @@
     <section id="sponsor">
       <div class="sponsor">
         <div class="linija-dole mb-1"></div>
-        <p style="letter-spacing:1px;" class="pb-1 pt-1 text-white text-center">{{ site.data.strings.footnote-dev | replace: '[OpenBosniana OS]', '
-													<a href="##">OpenBosniana OS</a>' | replace: '[bosniana.org]', '
-													<a href="##">bosniana.org</a>' | replace: '[Denis Maslo]', '
-													<a href="##">Denis Maslo</a>' }}
+        <p style="letter-spacing:1px;" class="pb-1 pt-1 text-white text-center">
+													<a href="##">OpenBosniana OS</a> and
+													<a href="##">bosniana.org</a> developed by:
+													<a href="##">Denis Maslo</a>
         </p>
 
         <p style="letter-spacing:1px;" class="pb-1 pt-1 text-white text-center"><i class="ri-mail-send-line"></i> Private email:
