--- a/packages/43.html
+++ b/packages/43.html
@@ -223,350 +223,350 @@
               <td><a href="pool/main/p/python-h11/python3-h11_0.14.0-1_all.deb">python3-h11</a></td>
               <td>0.14.0-1</td>
               <td>Pure-Python, bring-your-own-I/O implementation of HTTP/1.1 (Python 3)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/p/python-h2/python3-h2_4.1.0-4_all.deb">python3-h2</a></td>
               <td>4.1.0-4</td>
               <td>Pure-Python3 HTTP/2 State-Machine based protocol implementation in Python</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/p/python-hpack/python3-hpack_4.0.0-2_all.deb">python3-hpack</a></td>
               <td>4.0.0-2</td>
               <td>Pure-Python3 HTTP/2 header encoding (HPACK)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/h/httpcore/python3-httpcore_0.16.3-1_all.deb">python3-httpcore</a></td>
               <td>0.16.3-1</td>
               <td>minimal low-level HTTP client</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/p/python-httplib2/python3-httplib2_0.20.4-3_all.deb">python3-httplib2</a></td>
               <td>0.20.4-3</td>
               <td>comprehensive HTTP client library written for Python3</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/h/httpx/python3-httpx_0.23.3-1_all.deb">python3-httpx</a></td>
               <td>0.23.3-1</td>
               <td>next generation HTTP client</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/p/python-hyperframe/python3-hyperframe_6.0.0-1_all.deb">python3-hyperframe</a></td>
               <td>6.0.0-1</td>
               <td>Pure-Python3 HTTP/2 framing code</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/p/python-idna/python3-idna_3.3-1+deb12u1_all.deb">python3-idna</a></td>
               <td>3.3-1+deb12u1</td>
               <td>Python IDNA2008 (RFC 5891) handling (Python 3)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/p/python-itsdangerous/python3-itsdangerous_2.1.2-3_all.deb">python3-itsdangerous</a></td>
               <td>2.1.2-3</td>
               <td>Various helpers to pass trusted data to untrusted environment - Python 3.x</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/j/jinja2/python3-jinja2_3.1.2-1_all.deb">python3-jinja2</a></td>
               <td>3.1.2-1</td>
               <td>small but fast and easy to use stand-alone template engine</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/p/python-json-pointer/python3-json-pointer_2.3-2_all.deb">python3-json-pointer</a></td>
               <td>2.3-2</td>
               <td>resolve JSON pointers - Python 3.x</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/p/python-jsonschema/python3-jsonschema_4.10.3-1_all.deb">python3-jsonschema</a></td>
               <td>4.10.3-1</td>
               <td>An(other) implementation of JSON Schema (Draft 3, 4, 6, 7)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/p/pyjwt/python3-jwt_2.6.0-1_all.deb">python3-jwt</a></td>
               <td>2.6.0-1</td>
               <td>Python 3 implementation of JSON Web Token</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/l/lazr.restfulclient/python3-lazr.restfulclient_0.14.5-1_all.deb">python3-lazr.restfulclient</a></td>
               <td>0.14.5-1</td>
               <td>client for lazr.restful-based web services (Python 3)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/l/lazr.uri/python3-lazr.uri_1.0.6-3_all.deb">python3-lazr.uri</a></td>
               <td>1.0.6-3</td>
               <td>library for parsing, manipulating, and generating URIs</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/s/samba/python3-ldb_2.6.2+samba4.17.12+dfsg-0+deb12u1_amd64.deb">python3-ldb</a></td>
               <td>2:2.6.2+samba4.17.12+dfsg-0+deb12u1</td>
               <td>Python 3 bindings for LDB</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/p/python3-stdlib-extensions/python3-lib2to3_3.11.2-3_all.deb">python3-lib2to3</a></td>
               <td>3.11.2-3</td>
               <td>Interactive high-level object-oriented language (lib2to3)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/a/apparmor/python3-libapparmor_3.0.8-3_amd64.deb">python3-libapparmor</a></td>
               <td>3.0.8-3</td>
               <td>AppArmor library Python3 bindings</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/m/markdown-it-py/python3-markdown-it_2.1.0-5_all.deb">python3-markdown-it</a></td>
               <td>2.1.0-5</td>
               <td>Python port of markdown-it and some its associated plugins</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/m/markupsafe/python3-markupsafe_2.1.2-1+b1_amd64.deb">python3-markupsafe</a></td>
               <td>2.1.2-1+b1</td>
               <td>HTML/XHTML/XML string library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/m/mdurl/python3-mdurl_0.1.2-1_all.deb">python3-mdurl</a></td>
               <td>0.1.2-1</td>
               <td>Python port of the JavaScript mdurl package</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/python3-defaults/python3-minimal_3.11.2-1+b1_amd64.deb">python3-minimal</a></td>
               <td>3.11.2-1+b1</td>
               <td>minimal subset of the Python language (default python3 version)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/python-msgpack/python3-msgpack_1.0.3-2+b1_amd64.deb">python3-msgpack</a></td>
               <td>1.0.3-2+b1</td>
               <td>Python 3 implementation of MessagePack format</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/m/mutagen/python3-mutagen_1.46.0-1_all.deb">python3-mutagen</a></td>
               <td>1.46.0-1</td>
               <td>audio metadata editing library (Python 3)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/python-nacl/python3-nacl_1.5.0-2_amd64.deb">python3-nacl</a></td>
               <td>1.5.0-2</td>
               <td>Python bindings to libsodium (Python 3)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/p/python-notify2/python3-notify2_0.3-5_all.deb">python3-notify2</a></td>
               <td>0.3-5</td>
               <td>desktop notifications API for Python 3</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/p/python-oauthlib/python3-oauthlib_3.2.2-1_all.deb">python3-oauthlib</a></td>
               <td>3.2.2-1</td>
               <td>generic, spec-compliant implementation of OAuth for Python3</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/o/olefile/python3-olefile_0.46-3_all.deb">python3-olefile</a></td>
               <td>0.46-3</td>
               <td>Python module to read/write MS OLE2 files</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/p/pyopenssl/python3-openssl_23.0.0-1_all.deb">python3-openssl</a></td>
               <td>23.0.0-1</td>
               <td>Python 3 wrapper around the OpenSSL library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/p/python-packaging/python3-packaging_23.0-1_all.deb">python3-packaging</a></td>
               <td>23.0-1</td>
               <td>core utilities for python3 packages</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/pillow/python3-pil_9.4.0-1.1+deb12u1_amd64.deb">python3-pil</a></td>
               <td>9.4.0-1.1+deb12u1</td>
               <td>Python Imaging Library (Python3)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/p/python-pip/python3-pip_23.0.1+dfsg-1_all.deb">python3-pip</a></td>
               <td>23.0.1+dfsg-1</td>
               <td>Python package installer</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/p/python-pip/python3-pip-whl_23.0.1+dfsg-1_all.deb">python3-pip-whl</a></td>
               <td>23.0.1+dfsg-1</td>
               <td>Python package installer (pip wheel)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/s/setuptools/python3-pkg-resources_66.1.1-1_all.deb">python3-pkg-resources</a></td>
               <td>66.1.1-1</td>
               <td>Package Discovery and Resource Access using pkg_resources</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/p/pypng/python3-png_0.20220715.0-1_all.deb">python3-png</a></td>
               <td>0.20220715.0-1</td>
               <td>Pure Python PNG Reader/Writer (Python 3)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/python-psutil/python3-psutil_5.9.4-1+b1_amd64.deb">python3-psutil</a></td>
               <td>5.9.4-1+b1</td>
               <td>module providing convenience functions for managing processes (Python3)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/pycryptodome/python3-pycryptodome_3.11.0+dfsg1-4_amd64.deb">python3-pycryptodome</a></td>
               <td>3.11.0+dfsg1-4</td>
               <td>cryptographic Python library (Python 3)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/pycurl/python3-pycurl_7.45.2-3_amd64.deb">python3-pycurl</a></td>
               <td>7.45.2-3</td>
               <td>Python bindings to libcurl (Python 3)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/p/pygments/python3-pygments_2.14.0+dfsg-1_all.deb">python3-pygments</a></td>
               <td>2.14.0+dfsg-1</td>
               <td>syntax highlighting package written in Python 3</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/p/pyinotify/python3-pyinotify_0.9.6-2_all.deb">python3-pyinotify</a></td>
               <td>0.9.6-2</td>
               <td>simple Linux inotify Python bindings</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/python-pylibacl/python3-pylibacl_0.7.0-2_amd64.deb">python3-pylibacl</a></td>
               <td>0.7.0-2</td>
               <td>module for manipulating POSIX.1e ACLs (Python3 version)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/p/python-pynvim/python3-pynvim_0.4.2-2_all.deb">python3-pynvim</a></td>
               <td>0.4.2-2</td>
               <td>Python3 library for scripting Neovim processes through its msgpack-rpc API</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/p/pyparsing/python3-pyparsing_3.0.9-1_all.deb">python3-pyparsing</a></td>
               <td>3.0.9-1</td>
               <td>alternative to creating and executing simple grammars - Python 3.x</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/pyqt5/python3-pyqt5_5.15.9+dfsg-1_amd64.deb">python3-pyqt5</a></td>
               <td>5.15.9+dfsg-1</td>
               <td>Python 3 bindings for Qt5</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/pyqt5-sip/python3-pyqt5.sip_12.11.1-1_amd64.deb">python3-pyqt5.sip</a></td>
               <td>12.11.1-1</td>
               <td>runtime module for Python extensions using SIP</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/pyrsistent/python3-pyrsistent_0.18.1-1+b3_amd64.deb">python3-pyrsistent</a></td>
               <td>0.18.1-1+b3</td>
               <td>persistent/functional/immutable data structures for Python</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/pyside2/python3-pyside2.qtcore_5.15.8-2+b1_amd64.deb">python3-pyside2.qtcore</a></td>
               <td>5.15.8-2+b1</td>
               <td>Python bindings for Qt5 core module (Python 3)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/pyside2/python3-pyside2.qtgui_5.15.8-2+b1_amd64.deb">python3-pyside2.qtgui</a></td>
               <td>5.15.8-2+b1</td>
               <td>Python bindings for Qt5 Gui module (Python 3)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/pyside2/python3-pyside2.qtwidgets_5.15.8-2+b1_amd64.deb">python3-pyside2.qtwidgets</a></td>
               <td>5.15.8-2+b1</td>
               <td>Python bindings for Qt5 Widgets module (Python 3)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/p/pysimplesoap/python3-pysimplesoap_1.16.2-5_all.deb">python3-pysimplesoap</a></td>
               <td>1.16.2-5</td>
               <td>simple and lightweight SOAP Library (Python 3)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
 
         </tbody>
@@ -648,10 +648,10 @@
     <section id="sponsor">
       <div class="sponsor">
         <div class="linija-dole mb-1"></div>
-        <p style="letter-spacing:1px;" class="pb-1 pt-1 text-white text-center">{{ site.data.strings.footnote-dev | replace: '[OpenBosniana OS]', '
-													<a href="##">OpenBosniana OS</a>' | replace: '[bosniana.org]', '
-													<a href="##">bosniana.org</a>' | replace: '[Denis Maslo]', '
-													<a href="##">Denis Maslo</a>' }}
+        <p style="letter-spacing:1px;" class="pb-1 pt-1 text-white text-center">
+													<a href="##">OpenBosniana OS</a> and
+													<a href="##">bosniana.org</a> developed by:
+													<a href="##">Denis Maslo</a>
         </p>
 
         <p style="letter-spacing:1px;" class="pb-1 pt-1 text-white text-center"><i class="ri-mail-send-line"></i> Private email:
