--- a/packages/7.html
+++ b/packages/7.html
@@ -223,350 +223,350 @@
               <td><a href="pool/main/g/grub2/grub-ieee1275-dbg_2.12-1~bpo12+1_amd64.deb">grub-ieee1275-dbg</a></td>
               <td>2.12-1~bpo12+1</td>
               <td>GRand Unified Bootloader, version 2 (Open Firmware debug files)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/grub2/grub-linuxbios_2.12-1~bpo12+1_amd64.deb">grub-linuxbios</a></td>
               <td>2.12-1~bpo12+1</td>
               <td>GRand Unified Bootloader, version 2 (dummy package)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/grub2/grub-pc_2.12-1~bpo12+1_amd64.deb">grub-pc</a></td>
               <td>2.12-1~bpo12+1</td>
               <td>GRand Unified Bootloader, version 2 (PC/BIOS version)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/grub2/grub-pc-bin_2.12-1~bpo12+1_amd64.deb">grub-pc-bin</a></td>
               <td>2.12-1~bpo12+1</td>
               <td>GRand Unified Bootloader, version 2 (PC/BIOS modules)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/grub2/grub-pc-dbg_2.12-1~bpo12+1_amd64.deb">grub-pc-dbg</a></td>
               <td>2.12-1~bpo12+1</td>
               <td>GRand Unified Bootloader, version 2 (PC/BIOS debug files)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/grub2/grub-rescue-pc_2.12-1~bpo12+1_amd64.deb">grub-rescue-pc</a></td>
               <td>2.12-1~bpo12+1</td>
               <td>GRUB bootable rescue images, version 2 (PC/BIOS version)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/grub2/grub-theme-starfield_2.12-1~bpo12+1_amd64.deb">grub-theme-starfield</a></td>
               <td>2.12-1~bpo12+1</td>
               <td>GRand Unified Bootloader, version 2 (starfield theme)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/grub2/grub-xen_2.12-1~bpo12+1_amd64.deb">grub-xen</a></td>
               <td>2.12-1~bpo12+1</td>
               <td>GRand Unified Bootloader, version 2 (Xen version)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/grub2/grub-xen-bin_2.12-1~bpo12+1_amd64.deb">grub-xen-bin</a></td>
               <td>2.12-1~bpo12+1</td>
               <td>GRand Unified Bootloader, version 2 (Xen modules)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/grub2/grub-xen-dbg_2.12-1~bpo12+1_amd64.deb">grub-xen-dbg</a></td>
               <td>2.12-1~bpo12+1</td>
               <td>GRand Unified Bootloader, version 2 (Xen debug files)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/grub2/grub-xen-host_2.12-1~bpo12+1_amd64.deb">grub-xen-host</a></td>
               <td>2.12-1~bpo12+1</td>
               <td>GRand Unified Bootloader, version 2 (Xen host version)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/grub2/grub2_2.12-1~bpo12+1_amd64.deb">grub2</a></td>
               <td>2.12-1~bpo12+1</td>
               <td>GRand Unified Bootloader, version 2 (dummy package)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/grub2/grub2-common_2.12-1~bpo12+1_amd64.deb">grub2-common</a></td>
               <td>2.12-1~bpo12+1</td>
               <td>GRand Unified Bootloader (common files for version 2)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/g/gsettings-desktop-schemas/gsettings-desktop-schemas_43.0-1_all.deb">gsettings-desktop-schemas</a></td>
               <td>43.0-1</td>
               <td>GSettings desktop-wide schemas</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/f/fonts-urw-base35/gsfonts_20200910-7_all.deb">gsfonts</a></td>
               <td>2:20200910-7</td>
               <td>transitional dummy package (gsfonts -> fonts-urw-base35)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/c/clutter-gst-3.0/gstreamer1.0-clutter-3.0_3.0.27-3_amd64.deb">gstreamer1.0-clutter-3.0</a></td>
               <td>3.0.27-3</td>
               <td>Clutter PLugin for GStreamer 1.0</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gst-plugins-base1.0/gstreamer1.0-gl_1.22.0-3+deb12u2_amd64.deb">gstreamer1.0-gl</a></td>
               <td>1.22.0-3+deb12u2</td>
               <td>GStreamer plugins for GL</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gst-libav1.0/gstreamer1.0-libav_1.22.0-2_amd64.deb">gstreamer1.0-libav</a></td>
               <td>1.22.0-2</td>
               <td>ffmpeg plugin for GStreamer</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gst-plugins-bad1.0/gstreamer1.0-plugins-bad_1.22.0-4+deb12u5_amd64.deb">gstreamer1.0-plugins-bad</a></td>
               <td>1.22.0-4+deb12u5</td>
               <td>GStreamer plugins from the "bad" set</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gst-plugins-base1.0/gstreamer1.0-plugins-base_1.22.0-3+deb12u2_amd64.deb">gstreamer1.0-plugins-base</a></td>
               <td>1.22.0-3+deb12u2</td>
               <td>GStreamer plugins from the "base" set</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gst-plugins-good1.0/gstreamer1.0-plugins-good_1.22.0-5+deb12u1_amd64.deb">gstreamer1.0-plugins-good</a></td>
               <td>1.22.0-5+deb12u1</td>
               <td>GStreamer plugins from the "good" set</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gst-plugins-ugly1.0/gstreamer1.0-plugins-ugly_1.22.0-2+deb12u1_amd64.deb">gstreamer1.0-plugins-ugly</a></td>
               <td>1.22.0-2+deb12u1</td>
               <td>GStreamer plugins from the "ugly" set</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gst-plugins-base1.0/gstreamer1.0-x_1.22.0-3+deb12u2_amd64.deb">gstreamer1.0-x</a></td>
               <td>1.22.0-3+deb12u2</td>
               <td>GStreamer plugins for X11 and Pango</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gtk+3.0/gtk-update-icon-cache_3.24.38-2~deb12u2_amd64.deb">gtk-update-icon-cache</a></td>
               <td>3.24.38-2~deb12u2</td>
               <td>icon theme caching utility</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gtk+2.0/gtk2-engines-pixbuf_2.24.33-2+deb12u1_amd64.deb">gtk2-engines-pixbuf</a></td>
               <td>2.24.33-2+deb12u1</td>
               <td>pixbuf-based theme for GTK 2</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/g/gui-ufw/gufw_22.04.0-1_all.deb">gufw</a></td>
               <td>22.04.0-1</td>
               <td>graphical user interface for ufw</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gvfs/gvfs_1.50.3-1_amd64.deb">gvfs</a></td>
               <td>1.50.3-1</td>
               <td>userspace virtual filesystem - GIO module</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/g/gvfs/gvfs-common_1.50.3-1_all.deb">gvfs-common</a></td>
               <td>1.50.3-1</td>
               <td>userspace virtual filesystem - common data files</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gvfs/gvfs-daemons_1.50.3-1_amd64.deb">gvfs-daemons</a></td>
               <td>1.50.3-1</td>
               <td>userspace virtual filesystem - servers</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gvfs/gvfs-libs_1.50.3-1_amd64.deb">gvfs-libs</a></td>
               <td>1.50.3-1</td>
               <td>userspace virtual filesystem - private libraries</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gwenview/gwenview_22.12.3-1_amd64.deb">gwenview</a></td>
               <td>4:22.12.3-1</td>
               <td>image viewer</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/g/gyp/gyp_0.1+20220404git9ecf45e-2_all.deb">gyp</a></td>
               <td>0.1+20220404git9ecf45e-2</td>
               <td>Cross-platform build script generator</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gzip/gzip_1.12-1_amd64.deb">gzip</a></td>
               <td>1.12-1</td>
               <td>GNU compression utilities</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/h/haveged/haveged_1.9.14-1+b1_amd64.deb">haveged</a></td>
               <td>1.9.14-1+b1</td>
               <td>Linux entropy source using the HAVEGE algorithm</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/h/hfsplus/hfsplus_1.0.4-17_amd64.deb">hfsplus</a></td>
               <td>1.0.4-17</td>
               <td>Tools to access HFS+ formatted volumes</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/h/hfsutils/hfsutils_3.2.6-15_amd64.deb">hfsutils</a></td>
               <td>3.2.6-15</td>
               <td>Tools for reading and writing Macintosh volumes</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/h/hicolor-icon-theme/hicolor-icon-theme_0.17-2_all.deb">hicolor-icon-theme</a></td>
               <td>0.17-2</td>
               <td>default fallback theme for FreeDesktop.org icon themes</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/h/hostname/hostname_3.23+nmu1_amd64.deb">hostname</a></td>
               <td>3.23+nmu1</td>
               <td>utility to set/show the host name or domain name</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/s/scowl/hunspell-en-us_2020.12.07-2_all.deb">hunspell-en-us</a></td>
               <td>1:2020.12.07-2</td>
               <td>English_american dictionary for hunspell</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/h/hwdata/hwdata_0.368-1_all.deb">hwdata</a></td>
               <td>0.368-1</td>
               <td>hardware identification / configuration data</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/l/linux/hyperv-daemons_6.5.13-1parrot1_amd64.deb">hyperv-daemons</a></td>
               <td>6.5.13-1parrot1</td>
               <td>Support daemons for Linux running on Hyper-V</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/i/intel-vaapi-driver/i965-va-driver_2.4.1+dfsg1-1_amd64.deb">i965-va-driver</a></td>
               <td>2.4.1+dfsg1-1</td>
               <td>VAAPI driver for Intel G45 & HD Graphics family</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/i/ibus/ibus-data_1.5.27-5_all.deb">ibus-data</a></td>
               <td>1.5.27-5</td>
               <td>Intelligent Input Bus - data files</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/i/ifupdown/ifupdown_0.8.41_amd64.deb">ifupdown</a></td>
               <td>0.8.41</td>
               <td>high level tools to configure network interfaces</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/i/iio-sensor-proxy/iio-sensor-proxy_3.0-2_amd64.deb">iio-sensor-proxy</a></td>
               <td>3.0-2</td>
               <td>IIO sensors to D-Bus proxy</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/i/imagemagick/imagemagick-6-common_6.9.11.60+dfsg-1.6+deb12u2_all.deb">imagemagick-6-common</a></td>
               <td>8:6.9.11.60+dfsg-1.6+deb12u2</td>
               <td>image manipulation programs -- infrastructure</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/i/inetutils/inetutils-telnet_2.4-2+deb12u1_amd64.deb">inetutils-telnet</a></td>
               <td>2:2.4-2+deb12u1</td>
               <td>telnet client</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/t/texinfo/info_6.8-6+b1_amd64.deb">info</a></td>
               <td>6.8-6+b1</td>
               <td>Standalone GNU Info documentation browser</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/i/init-system-helpers/init_1.65.2+openbosniana_amd64.deb">init</a></td>
               <td>1.65.2+openbosniana</td>
               <td>metapackage ensuring an init system is installed</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/i/init-system-helpers/init-system-helpers_1.65.2+openbosniana_all.deb">init-system-helpers</a></td>
               <td>1.65.2+openbosniana</td>
               <td>helper tools for all init systems</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
 
         </tbody>
@@ -648,10 +648,10 @@
     <section id="sponsor">
       <div class="sponsor">
         <div class="linija-dole mb-1"></div>
-        <p style="letter-spacing:1px;" class="pb-1 pt-1 text-white text-center">{{ site.data.strings.footnote-dev | replace: '[OpenBosniana OS]', '
-													<a href="##">OpenBosniana OS</a>' | replace: '[bosniana.org]', '
-													<a href="##">bosniana.org</a>' | replace: '[Denis Maslo]', '
-													<a href="##">Denis Maslo</a>' }}
+        <p style="letter-spacing:1px;" class="pb-1 pt-1 text-white text-center">
+													<a href="##">OpenBosniana OS</a> and
+													<a href="##">bosniana.org</a> developed by:
+													<a href="##">Denis Maslo</a>
         </p>
 
         <p style="letter-spacing:1px;" class="pb-1 pt-1 text-white text-center"><i class="ri-mail-send-line"></i> Private email:
