--- a/packages/14.html
+++ b/packages/14.html
@@ -223,350 +223,350 @@
               <td><a href="pool/main/g/gtk+2.0/libgail-common_2.24.33-2+deb12u1_amd64.deb">libgail-common</a></td>
               <td>2.24.33-2+deb12u1</td>
               <td>GNOME Accessibility Implementation Library -- common modules</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gtk+2.0/libgail18_2.24.33-2+deb12u1_amd64.deb">libgail18</a></td>
               <td>2.24.33-2+deb12u1</td>
               <td>GNOME Accessibility Implementation Library -- shared libraries</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libg/libgav1/libgav1-1_0.18.0-1+b1_amd64.deb">libgav1-1</a></td>
               <td>0.18.0-1+b1</td>
               <td>AV1 decoder developed by Google -- runtime library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/m/mesa/libgbm1_22.3.6-1+deb12u1_amd64.deb">libgbm1</a></td>
               <td>22.3.6-1+deb12u1</td>
               <td>generic buffer management API -- runtime</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gcab/libgcab-1.0-0_1.5-1_amd64.deb">libgcab-1.0-0</a></td>
               <td>1.5-1</td>
               <td>Microsoft Cabinet file manipulation library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gcc-12/libgcc-12-dev_12.2.0-14_amd64.deb">libgcc-12-dev</a></td>
               <td>12.2.0-14</td>
               <td>GCC support library (development files)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gcc-12/libgcc-s1_12.2.0-14_amd64.deb">libgcc-s1</a></td>
               <td>12.2.0-14</td>
               <td>GCC support library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libg/libgcrypt20/libgcrypt20_1.10.1-3_amd64.deb">libgcrypt20</a></td>
               <td>1.10.1-3</td>
               <td>LGPL Crypto library - runtime library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libg/libgd2/libgd3_2.3.3-9_amd64.deb">libgd3</a></td>
               <td>2.3.3-9</td>
               <td>GD Graphics Library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gdbm/libgdbm-compat4_1.23-3_amd64.deb">libgdbm-compat4</a></td>
               <td>1.23-3</td>
               <td>GNU dbm database routines (legacy support runtime version)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gdbm/libgdbm6_1.23-3_amd64.deb">libgdbm6</a></td>
               <td>1.23-3</td>
               <td>GNU dbm database routines (runtime version)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gdk-pixbuf/libgdk-pixbuf-2.0-0_2.42.10+dfsg-1+deb12u1_amd64.deb">libgdk-pixbuf-2.0-0</a></td>
               <td>2.42.10+dfsg-1+deb12u1</td>
               <td>GDK Pixbuf library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gdk-pixbuf/libgdk-pixbuf2.0-bin_2.42.10+dfsg-1+deb12u1_amd64.deb">libgdk-pixbuf2.0-bin</a></td>
               <td>2.42.10+dfsg-1+deb12u1</td>
               <td>GDK Pixbuf library (thumbnailer)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/g/gdk-pixbuf/libgdk-pixbuf2.0-common_2.42.10+dfsg-1+deb12u1_all.deb">libgdk-pixbuf2.0-common</a></td>
               <td>2.42.10+dfsg-1+deb12u1</td>
               <td>GDK Pixbuf library - data files</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gcc-12/libgfortran5_12.2.0-14_amd64.deb">libgfortran5</a></td>
               <td>12.2.0-14</td>
               <td>Runtime library for GNU Fortran applications</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/giflib/libgif7_5.2.1-2.5_amd64.deb">libgif7</a></td>
               <td>5.2.1-2.5</td>
               <td>library for GIF images (library)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gobject-introspection/libgirepository-1.0-1_1.74.0-3_amd64.deb">libgirepository-1.0-1</a></td>
               <td>1.74.0-3</td>
               <td>Library for handling GObject introspection data (runtime library)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libg/libgit2/libgit2-1.5_1.5.1+ds-1+deb12u1_amd64.deb">libgit2-1.5</a></td>
               <td>1.5.1+ds-1+deb12u1</td>
               <td>low-level Git library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libg/libglvnd/libgl1_1.6.0-1_amd64.deb">libgl1</a></td>
               <td>1.6.0-1</td>
               <td>Vendor neutral GL dispatch library -- legacy GL support</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/m/mesa/libgl1-mesa-dri_22.3.6-1+deb12u1_amd64.deb">libgl1-mesa-dri</a></td>
               <td>22.3.6-1+deb12u1</td>
               <td>free implementation of the OpenGL API -- DRI modules</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/m/mesa/libglapi-mesa_22.3.6-1+deb12u1_amd64.deb">libglapi-mesa</a></td>
               <td>22.3.6-1+deb12u1</td>
               <td>free implementation of the GL API -- shared library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libg/libglvnd/libgles2_1.6.0-1_amd64.deb">libgles2</a></td>
               <td>1.6.0-1</td>
               <td>Vendor neutral GL dispatch library -- GLESv2 support</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/glib2.0/libglib2.0-0_2.74.6-2+deb12u3_amd64.deb">libglib2.0-0</a></td>
               <td>2.74.6-2+deb12u3</td>
               <td>GLib library of C routines</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/glib2.0/libglib2.0-bin_2.74.6-2+deb12u3_amd64.deb">libglib2.0-bin</a></td>
               <td>2.74.6-2+deb12u3</td>
               <td>Programs for the GLib library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/g/glib2.0/libglib2.0-data_2.74.6-2+deb12u3_all.deb">libglib2.0-data</a></td>
               <td>2.74.6-2+deb12u3</td>
               <td>Common files for GLib library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/glibmm2.4/libglibmm-2.4-1v5_2.66.5-2_amd64.deb">libglibmm-2.4-1v5</a></td>
               <td>2.66.5-2</td>
               <td>C++ wrapper for the GLib toolkit (shared libraries)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libg/libglu/libglu1-mesa_9.0.2-1.1_amd64.deb">libglu1-mesa</a></td>
               <td>9.0.2-1.1</td>
               <td>Mesa OpenGL utility library (GLU)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libg/libglvnd/libglvnd0_1.6.0-1_amd64.deb">libglvnd0</a></td>
               <td>1.6.0-1</td>
               <td>Vendor neutral GL dispatch library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/m/mesa/libglx-mesa0_22.3.6-1+deb12u1_amd64.deb">libglx-mesa0</a></td>
               <td>22.3.6-1+deb12u1</td>
               <td>free implementation of the OpenGL API -- GLX vendor library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libg/libglvnd/libglx0_1.6.0-1_amd64.deb">libglx0</a></td>
               <td>1.6.0-1</td>
               <td>Vendor neutral GL dispatch library -- GLX support</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/game-music-emu/libgme0_0.6.3-6_amd64.deb">libgme0</a></td>
               <td>0.6.3-6</td>
               <td>Playback library for video game music files - shared library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gmp/libgmp10_6.2.1+dfsg1-1.1_amd64.deb">libgmp10</a></td>
               <td>2:6.2.1+dfsg1-1.1</td>
               <td>Multiprecision arithmetic library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gnutls28/libgnutls-dane0_3.7.9-2+deb12u3_amd64.deb">libgnutls-dane0</a></td>
               <td>3.7.9-2+deb12u3</td>
               <td>GNU TLS library - DANE security support</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gnutls28/libgnutls30_3.7.9-2+deb12u3_amd64.deb">libgnutls30</a></td>
               <td>3.7.9-2+deb12u3</td>
               <td>GNU TLS library - main runtime library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gcc-12/libgomp1_12.2.0-14_amd64.deb">libgomp1</a></td>
               <td>12.2.0-14</td>
               <td>GCC OpenMP (GOMP) support library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libg/libgpg-error/libgpg-error0_1.46-1_amd64.deb">libgpg-error0</a></td>
               <td>1.46-1</td>
               <td>GnuPG development runtime library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gpgme1.0/libgpgme11_1.18.0-3+b1_amd64.deb">libgpgme11</a></td>
               <td>1.18.0-3+b1</td>
               <td>GPGME - GnuPG Made Easy (library)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gpgme1.0/libgpgmepp6_1.18.0-3+b1_amd64.deb">libgpgmepp6</a></td>
               <td>1.18.0-3+b1</td>
               <td>C++ wrapper library for GPGME</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libg/libgphoto2/libgphoto2-6_2.5.30-1_amd64.deb">libgphoto2-6</a></td>
               <td>2.5.30-1</td>
               <td>gphoto2 digital camera library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/libg/libgphoto2/libgphoto2-l10n_2.5.30-1_all.deb">libgphoto2-l10n</a></td>
               <td>2.5.30-1</td>
               <td>gphoto2 digital camera library - localized messages</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libg/libgphoto2/libgphoto2-port12_2.5.30-1_amd64.deb">libgphoto2-port12</a></td>
               <td>2.5.30-1</td>
               <td>gphoto2 digital camera port library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gpm/libgpm2_1.20.7-10+b1_amd64.deb">libgpm2</a></td>
               <td>1.20.7-10+b1</td>
               <td>General Purpose Mouse - shared library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/b/binutils/libgprofng0_2.40-2_amd64.deb">libgprofng0</a></td>
               <td>2.40-2</td>
               <td>GNU Next Generation profiler (runtime library)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gpsd/libgps28_3.22-4.1+b1_amd64.deb">libgps28</a></td>
               <td>3.22-4.1+b1</td>
               <td>Global Positioning System - library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/grantlee5/libgrantlee-templates5_5.2.0-4_amd64.deb">libgrantlee-templates5</a></td>
               <td>5.2.0-4</td>
               <td>Grantlee templating library for Qt - Templates</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/graphene/libgraphene-1.0-0_1.10.8-1_amd64.deb">libgraphene-1.0-0</a></td>
               <td>1.10.8-1</td>
               <td>library of graphic data types</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/graphite2/libgraphite2-3_1.3.14-1_amd64.deb">libgraphite2-3</a></td>
               <td>1.3.14-1</td>
               <td>Font rendering engine for Complex Scripts -- library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/g/ghostscript/libgs-common_10.0.0~dfsg-11+deb12u4_all.deb">libgs-common</a></td>
               <td>10.0.0~dfsg-11+deb12u4</td>
               <td>interpreter for the PostScript language and for PDF - ICC profiles</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/ghostscript/libgs10_10.0.0~dfsg-11+deb12u4_amd64.deb">libgs10</a></td>
               <td>10.0.0~dfsg-11+deb12u4</td>
               <td>interpreter for the PostScript language and for PDF - Library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/g/ghostscript/libgs10-common_10.0.0~dfsg-11+deb12u4_all.deb">libgs10-common</a></td>
               <td>10.0.0~dfsg-11+deb12u4</td>
               <td>interpreter for the PostScript language and for PDF - common files</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
 
         </tbody>
@@ -648,10 +648,10 @@
     <section id="sponsor">
       <div class="sponsor">
         <div class="linija-dole mb-1"></div>
-        <p style="letter-spacing:1px;" class="pb-1 pt-1 text-white text-center">{{ site.data.strings.footnote-dev | replace: '[OpenBosniana OS]', '
-													<a href="##">OpenBosniana OS</a>' | replace: '[bosniana.org]', '
-													<a href="##">bosniana.org</a>' | replace: '[Denis Maslo]', '
-													<a href="##">Denis Maslo</a>' }}
+        <p style="letter-spacing:1px;" class="pb-1 pt-1 text-white text-center">
+													<a href="##">OpenBosniana OS</a> and
+													<a href="##">bosniana.org</a> developed by:
+													<a href="##">Denis Maslo</a>
         </p>
 
         <p style="letter-spacing:1px;" class="pb-1 pt-1 text-white text-center"><i class="ri-mail-send-line"></i> Private email:
