--- a/packages/16.html
+++ b/packages/16.html
@@ -223,350 +223,350 @@
               <td><a href="pool/main/libi/libiec61883/libiec61883-0_1.2.0-6+b1_amd64.deb">libiec61883-0</a></td>
               <td>1.2.0-6+b1</td>
               <td>partial implementation of IEC 61883 (shared lib)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/i/intel-gmmlib/libigdgmm12_22.3.3+ds1-1_amd64.deb">libigdgmm12</a></td>
               <td>22.3.3+ds1-1</td>
               <td>Intel Graphics Memory Management Library -- shared library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/i/ijs/libijs-0.35_0.35-15_amd64.deb">libijs-0.35</a></td>
               <td>0.35-15</td>
               <td>IJS raster image transport protocol: shared library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/libi/libimage-exiftool-perl/libimage-exiftool-perl_12.57+dfsg-1_all.deb">libimage-exiftool-perl</a></td>
               <td>12.57+dfsg-1</td>
               <td>library and program to read and write meta information in multimedia files</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/i/imath/libimath-3-1-29_3.1.6-1_amd64.deb">libimath-3-1-29</a></td>
               <td>3.1.6-1</td>
               <td>Utility libraries from ASF used by OpenEXR - runtime</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libi/libimobiledevice/libimobiledevice6_1.3.0-6+b3_amd64.deb">libimobiledevice6</a></td>
               <td>1.3.0-6+b3</td>
               <td>Library for communicating with iPhone and other Apple devices</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libi/libinih/libinih1_55-1_amd64.deb">libinih1</a></td>
               <td>55-1</td>
               <td>simple .INI file parser</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libi/libinput/libinput-bin_1.22.1-1_amd64.deb">libinput-bin</a></td>
               <td>1.22.1-1</td>
               <td>input device management and event handling library - udev quirks</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libi/libinput/libinput10_1.22.1-1_amd64.deb">libinput10</a></td>
               <td>1.22.1-1</td>
               <td>input device management and event handling library - shared library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libi/libinstpatch/libinstpatch-1.0-2_1.1.6-1_amd64.deb">libinstpatch-1.0-2</a></td>
               <td>1.1.6-1</td>
               <td>MIDI instrument editing library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/libi/libio-html-perl/libio-html-perl_1.004-3_all.deb">libio-html-perl</a></td>
               <td>1.004-3</td>
               <td>open an HTML file with automatic charset detection</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libi/libio-pty-perl/libio-pty-perl_1.17-1_amd64.deb">libio-pty-perl</a></td>
               <td>1:1.17-1</td>
               <td>Perl module for pseudo tty IO</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/libi/libio-socket-ssl-perl/libio-socket-ssl-perl_2.081-2_all.deb">libio-socket-ssl-perl</a></td>
               <td>2.081-2</td>
               <td>Perl module implementing object oriented interface to SSL sockets</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/i/io-stringy/libio-stringy-perl_2.111-3_all.deb">libio-stringy-perl</a></td>
               <td>2.111-3</td>
               <td>modules for I/O on in-core objects (strings/arrays)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/i/iptables/libip4tc2_1.8.9-2_amd64.deb">libip4tc2</a></td>
               <td>1.8.9-2</td>
               <td>netfilter libip4tc library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/i/iptables/libip6tc2_1.8.9-2_amd64.deb">libip6tc2</a></td>
               <td>1.8.9-2</td>
               <td>netfilter libip6tc library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/libi/libipc-run-perl/libipc-run-perl_20220807.0-1_all.deb">libipc-run-perl</a></td>
               <td>20220807.0-1</td>
               <td>Perl module for running processes</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/libi/libipc-system-simple-perl/libipc-system-simple-perl_1.30-2_all.deb">libipc-system-simple-perl</a></td>
               <td>1.30-2</td>
               <td>Perl module to run commands simply, with detailed diagnostics</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/i/intel-processor-trace/libipt2_2.0.5-1_amd64.deb">libipt2</a></td>
               <td>2.0.5-1</td>
               <td>Intel Processor Trace Decoder Library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/i/isl/libisl23_0.25-1.1_amd64.deb">libisl23</a></td>
               <td>0.25-1.1</td>
               <td>manipulating sets and relations of integer points bounded by linear constraints</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libi/libisoburn/libisoburn1_1.5.4-4_amd64.deb">libisoburn1</a></td>
               <td>1.5.4-4</td>
               <td>library to handle creation and inspection of ISO-9660 file systems</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libi/libisofs/libisofs6_1.5.4-1_amd64.deb">libisofs6</a></td>
               <td>1.5.4-1</td>
               <td>library to create ISO 9660 images</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gcc-12/libitm1_12.2.0-14_amd64.deb">libitm1</a></td>
               <td>12.2.0-14</td>
               <td>GNU Transactional Memory Library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/pupnp-1.8/libixml10_1.8.4-2_amd64.deb">libixml10</a></td>
               <td>1:1.8.4-2</td>
               <td>Portable SDK for UPnP Devices, version 1.8 (ixml shared library)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/j/jackd2/libjack-jackd2-0_1.9.21~dfsg-3_amd64.deb">libjack-jackd2-0</a></td>
               <td>1.9.21~dfsg-3</td>
               <td>JACK Audio Connection Kit (libraries)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/j/jansson/libjansson4_2.14-2_amd64.deb">libjansson4</a></td>
               <td>2.14-2</td>
               <td>C library for encoding, decoding and manipulating JSON data</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/w/webkit2gtk/libjavascriptcoregtk-4.0-18_2.44.3-1~deb12u1_amd64.deb">libjavascriptcoregtk-4.0-18</a></td>
               <td>2.44.3-1~deb12u1</td>
               <td>JavaScript engine library from WebKitGTK</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libj/libjaylink/libjaylink0_0.3.1-1_amd64.deb">libjaylink0</a></td>
               <td>0.3.1-1</td>
               <td>library for interacting with J-Link programmers</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/j/jbigkit/libjbig0_2.1-6.1_amd64.deb">libjbig0</a></td>
               <td>2.1-6.1</td>
               <td>JBIGkit libraries</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/j/jbig2dec/libjbig2dec0_0.19-3_amd64.deb">libjbig2dec0</a></td>
               <td>0.19-3</td>
               <td>JBIG2 decoder library - shared libraries</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libj/libjcat/libjcat1_0.1.9-1_amd64.deb">libjcat1</a></td>
               <td>0.1.9-1</td>
               <td>JSON catalog library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/j/jemalloc/libjemalloc2_5.3.0-1_amd64.deb">libjemalloc2</a></td>
               <td>5.3.0-1</td>
               <td>general-purpose scalable concurrent malloc(3) implementation</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/j/jimtcl/libjim0.81_0.81+dfsg0-2_amd64.deb">libjim0.81</a></td>
               <td>0.81+dfsg0-2</td>
               <td>small-footprint implementation of Tcl - shared library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libj/libjpeg-turbo/libjpeg62-turbo_2.1.5-2_amd64.deb">libjpeg62-turbo</a></td>
               <td>1:2.1.5-2</td>
               <td>libjpeg-turbo JPEG runtime library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/j/jq/libjq1_1.6-2.1_amd64.deb">libjq1</a></td>
               <td>1.6-2.1</td>
               <td>lightweight and flexible command-line JSON processor - shared library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-jquery/libjs-jquery_3.6.1+dfsg+~3.5.14-1_all.deb">libjs-jquery</a></td>
               <td>3.6.1+dfsg+~3.5.14-1</td>
               <td>JavaScript library for dynamic web applications</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/u/underscore/libjs-underscore_1.13.4~dfsg+~1.11.4-3_all.deb">libjs-underscore</a></td>
               <td>1.13.4~dfsg+~1.11.4-3</td>
               <td>JavaScript's functional programming helper library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/j/json-c/libjson-c5_0.16-2_amd64.deb">libjson-c5</a></td>
               <td>0.16-2</td>
               <td>JSON manipulation library - shared library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/j/json-glib/libjson-glib-1.0-0_1.6.6-1_amd64.deb">libjson-glib-1.0-0</a></td>
               <td>1.6.6-1</td>
               <td>GLib JSON manipulation library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/j/json-glib/libjson-glib-1.0-common_1.6.6-1_all.deb">libjson-glib-1.0-common</a></td>
               <td>1.6.6-1</td>
               <td>GLib JSON manipulation library (common files)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/j/jigit/libjte2_1.22-3_amd64.deb">libjte2</a></td>
               <td>1.22-3</td>
               <td>Jigdo Template Export - runtime library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/j/jpeg-xl/libjxl0.7_0.7.0-10_amd64.deb">libjxl0.7</a></td>
               <td>0.7.0-10</td>
               <td>JPEG XL Image Coding System - "JXL" (shared libraries)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/j/jxrlib/libjxr-tools_1.2~git20170615.f752187-5_amd64.deb">libjxr-tools</a></td>
               <td>1.2~git20170615.f752187-5</td>
               <td>JPEG-XR lib - command line apps</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/j/jxrlib/libjxr0_1.2~git20170615.f752187-5_amd64.deb">libjxr0</a></td>
               <td>1.2~git20170615.f752187-5</td>
               <td>JPEG-XR lib - libraries</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/krb5/libk5crypto3_1.20.1-2+deb12u2_amd64.deb">libk5crypto3</a></td>
               <td>1.20.1-2+deb12u2</td>
               <td>MIT Kerberos runtime libraries - Crypto Library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kaccounts-integration/libkaccounts2_22.12.3-1_amd64.deb">libkaccounts2</a></td>
               <td>4:22.12.3-1</td>
               <td>System to administer web accounts - shared library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libk/libkate/libkate1_0.4.1-11_amd64.deb">libkate1</a></td>
               <td>0.4.1-11</td>
               <td>Codec for karaoke and text encapsulation</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kcolorpicker/libkcolorpicker0_0.2.0-1_amd64.deb">libkcolorpicker0</a></td>
               <td>0.2.0-1</td>
               <td>QToolButton-like widget with color selection popup menu (lib)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kdecoration/libkdecorations2-5v5_5.27.5-2_amd64.deb">libkdecorations2-5v5</a></td>
               <td>4:5.27.5-2</td>
               <td>library to create window decorations</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kdecoration/libkdecorations2private10_5.27.5-2_amd64.deb">libkdecorations2private10</a></td>
               <td>4:5.27.5-2</td>
               <td>library to create window decorations - private library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
 
         </tbody>
@@ -648,10 +648,10 @@
     <section id="sponsor">
       <div class="sponsor">
         <div class="linija-dole mb-1"></div>
-        <p style="letter-spacing:1px;" class="pb-1 pt-1 text-white text-center">{{ site.data.strings.footnote-dev | replace: '[OpenBosniana OS]', '
-													<a href="##">OpenBosniana OS</a>' | replace: '[bosniana.org]', '
-													<a href="##">bosniana.org</a>' | replace: '[Denis Maslo]', '
-													<a href="##">Denis Maslo</a>' }}
+        <p style="letter-spacing:1px;" class="pb-1 pt-1 text-white text-center">
+													<a href="##">OpenBosniana OS</a> and
+													<a href="##">bosniana.org</a> developed by:
+													<a href="##">Denis Maslo</a>
         </p>
 
         <p style="letter-spacing:1px;" class="pb-1 pt-1 text-white text-center"><i class="ri-mail-send-line"></i> Private email:
