--- a/packages/23.html
+++ b/packages/23.html
@@ -223,350 +223,350 @@
               <td><a href="pool/main/o/orc/liborc-0.4-0_0.4.33-2_amd64.deb">liborc-0.4-0</a></td>
               <td>1:0.4.33-2</td>
               <td>Library of Optimized Inner Loops Runtime Compiler</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/o/ostree/libostree-1-1_2022.7-2_amd64.deb">libostree-1-1</a></td>
               <td>2022.7-2</td>
               <td>content-addressed filesystem for operating system binaries (library)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libo/libotr/libotr5_4.1.1-5_amd64.deb">libotr5</a></td>
               <td>4.1.1-5</td>
               <td>Off-the-Record Messaging library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/o/oxygen/liboxygenstyle5-5_5.27.5-2_amd64.deb">liboxygenstyle5-5</a></td>
               <td>4:5.27.5-2</td>
               <td>style library for the Oxygen desktop theme</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/o/oxygen/liboxygenstyleconfig5-5_5.27.5-2_amd64.deb">liboxygenstyleconfig5-5</a></td>
               <td>4:5.27.5-2</td>
               <td>style library configuration for the Oxygen desktop theme</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/p11-kit/libp11-kit0_0.24.1-2_amd64.deb">libp11-kit0</a></td>
               <td>0.24.1-2</td>
               <td>library for loading and coordinating access to PKCS#11 modules - runtime</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/packagekit/libpackagekit-glib2-18_1.2.6-5_amd64.deb">libpackagekit-glib2-18</a></td>
               <td>1.2.6-5</td>
               <td>Library for accessing PackageKit using GLib</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/packagekit-qt/libpackagekitqt5-1_1.1.1-1_amd64.deb">libpackagekitqt5-1</a></td>
               <td>1.1.1-1</td>
               <td>Library for accessing PackageKit using Qt5</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/k/kwallet-pam/libpam-kwallet-common_5.27.5-2_all.deb">libpam-kwallet-common</a></td>
               <td>5.27.5-2</td>
               <td>KWallet integration with PAM (common files)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kwallet-pam/libpam-kwallet5_5.27.5-2_amd64.deb">libpam-kwallet5</a></td>
               <td>5.27.5-2</td>
               <td>KWallet (Kf5) integration with PAM</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/pam/libpam-modules_1.5.2-6+deb12u1_amd64.deb">libpam-modules</a></td>
               <td>1.5.2-6+deb12u1</td>
               <td>Pluggable Authentication Modules for PAM</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/pam/libpam-modules-bin_1.5.2-6+deb12u1_amd64.deb">libpam-modules-bin</a></td>
               <td>1.5.2-6+deb12u1</td>
               <td>Pluggable Authentication Modules for PAM - helper binaries</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/p/pam/libpam-runtime_1.5.2-6+deb12u1_all.deb">libpam-runtime</a></td>
               <td>1.5.2-6+deb12u1</td>
               <td>Runtime support for the PAM library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/s/systemd/libpam-systemd_252.30-1~deb12u2_amd64.deb">libpam-systemd</a></td>
               <td>252.30-1~deb12u2</td>
               <td>system and service manager - PAM module</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/pam/libpam0g_1.5.2-6+deb12u1_amd64.deb">libpam0g</a></td>
               <td>1.5.2-6+deb12u1</td>
               <td>Pluggable Authentication Modules library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/pango1.0/libpango-1.0-0_1.50.12+ds-1_amd64.deb">libpango-1.0-0</a></td>
               <td>1.50.12+ds-1</td>
               <td>Layout and rendering of internationalized text</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/pango1.0/libpangocairo-1.0-0_1.50.12+ds-1_amd64.deb">libpangocairo-1.0-0</a></td>
               <td>1.50.12+ds-1</td>
               <td>Layout and rendering of internationalized text</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/pango1.0/libpangoft2-1.0-0_1.50.12+ds-1_amd64.deb">libpangoft2-1.0-0</a></td>
               <td>1.50.12+ds-1</td>
               <td>Layout and rendering of internationalized text</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/pangomm/libpangomm-1.4-1v5_2.46.3-1_amd64.deb">libpangomm-1.4-1v5</a></td>
               <td>2.46.3-1</td>
               <td>C++ Wrapper for pango (shared libraries)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/pango1.0/libpangoxft-1.0-0_1.50.12+ds-1_amd64.deb">libpangoxft-1.0-0</a></td>
               <td>1.50.12+ds-1</td>
               <td>Layout and rendering of internationalized text</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libp/libpaper/libpaper-utils_1.1.29_amd64.deb">libpaper-utils</a></td>
               <td>1.1.29</td>
               <td>library for handling paper characteristics (utilities)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libp/libpaper/libpaper1_1.1.29_amd64.deb">libpaper1</a></td>
               <td>1.1.29</td>
               <td>library for handling paper characteristics</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/parted/libparted-fs-resize0_3.5-3_amd64.deb">libparted-fs-resize0</a></td>
               <td>3.5-3</td>
               <td>disk partition manipulator - shared FS resizing library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/parted/libparted2_3.5-3_amd64.deb">libparted2</a></td>
               <td>3.5-3</td>
               <td>disk partition manipulator - shared library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libp/libpcap/libpcap0.8_1.10.3-1_amd64.deb">libpcap0.8</a></td>
               <td>1.10.3-1</td>
               <td>system interface for user-level packet capture</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/pciutils/libpci3_3.9.0-4_amd64.deb">libpci3</a></td>
               <td>1:3.9.0-4</td>
               <td>PCI utilities (shared library)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libp/libpciaccess/libpciaccess0_0.17-2_amd64.deb">libpciaccess0</a></td>
               <td>0.17-2</td>
               <td>Generic PCI access library for X</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/pcre2/libpcre2-16-0_10.42-1_amd64.deb">libpcre2-16-0</a></td>
               <td>10.42-1</td>
               <td>New Perl Compatible Regular Expression Library - 16 bit runtime files</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/pcre2/libpcre2-8-0_10.42-1_amd64.deb">libpcre2-8-0</a></td>
               <td>10.42-1</td>
               <td>New Perl Compatible Regular Expression Library- 8 bit runtime files</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/pcre3/libpcre3_8.39-15_amd64.deb">libpcre3</a></td>
               <td>2:8.39-15</td>
               <td>Old Perl 5 Compatible Regular Expression Library - runtime files</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/pcsc-lite/libpcsclite1_1.9.9-2_amd64.deb">libpcsclite1</a></td>
               <td>1.9.9-2</td>
               <td>Middleware to access a smart card using PC/SC (library)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/perl/libperl5.36_5.36.0-7+deb12u1_amd64.deb">libperl5.36</a></td>
               <td>5.36.0-7+deb12u1</td>
               <td>shared Perl library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libp/libpgm/libpgm-5.3-0_5.3.128~dfsg-2_amd64.deb">libpgm-5.3-0</a></td>
               <td>5.3.128~dfsg-2</td>
               <td>OpenPGM shared library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/phonon/libphonon4qt5-4_4.11.1-4_amd64.deb">libphonon4qt5-4</a></td>
               <td>4:4.11.1-4</td>
               <td>multimedia framework from KDE using Qt 5 - core library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/p/phonon/libphonon4qt5-data_4.11.1-4_all.deb">libphonon4qt5-data</a></td>
               <td>4:4.11.1-4</td>
               <td>multimedia framework from KDE using Qt 5 - core library data</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libp/libpipeline/libpipeline1_1.5.7-1_amd64.deb">libpipeline1</a></td>
               <td>1.5.7-1</td>
               <td>Unix process pipeline manipulation library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/pipewire/libpipewire-0.3-0_0.3.65-3+deb12u1_amd64.deb">libpipewire-0.3-0</a></td>
               <td>0.3.65-3+deb12u1</td>
               <td>libraries for the PipeWire multimedia server</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/p/pipewire/libpipewire-0.3-common_0.3.65-3+deb12u1_all.deb">libpipewire-0.3-common</a></td>
               <td>0.3.65-3+deb12u1</td>
               <td>libraries for the PipeWire multimedia server - common files</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/pixman/libpixman-1-0_0.42.2-1_amd64.deb">libpixman-1-0</a></td>
               <td>0.42.2-1</td>
               <td>pixel-manipulation library for X and cairo</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libp/libplacebo/libplacebo208_4.208.0-3_amd64.deb">libplacebo208</a></td>
               <td>4.208.0-3</td>
               <td>GPU-accelerated video/image rendering primitives (shared library)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/plasma-workspace/libplasma-geolocation-interface5_5.27.5-2+deb12u2_amd64.deb">libplasma-geolocation-interface5</a></td>
               <td>4:5.27.5-2+deb12u2</td>
               <td>Plasma Workspace for KF5 library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libp/libplist/libplist3_2.2.0-6+b2_amd64.deb">libplist3</a></td>
               <td>2.2.0-6+b2</td>
               <td>Library for handling Apple binary and XML property lists</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/plymouth/libplymouth5_22.02.122-3_amd64.deb">libplymouth5</a></td>
               <td>22.02.122-3</td>
               <td>graphical boot animation and logger - shared libraries</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libp/libpng1.6/libpng16-16_1.6.39-2_amd64.deb">libpng16-16</a></td>
               <td>1.6.39-2</td>
               <td>PNG library - runtime (version 1.6)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/pocketsphinx/libpocketsphinx3_0.8+5prealpha+1-15_amd64.deb">libpocketsphinx3</a></td>
               <td>0.8+5prealpha+1-15</td>
               <td>Speech recognition tool - front-end library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/policykit-1/libpolkit-agent-1-0_122-3_amd64.deb">libpolkit-agent-1-0</a></td>
               <td>122-3</td>
               <td>polkit Authentication Agent API</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/policykit-1/libpolkit-gobject-1-0_122-3_amd64.deb">libpolkit-gobject-1-0</a></td>
               <td>122-3</td>
               <td>polkit Authorization API</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/polkit-qt-1/libpolkit-qt5-1-1_0.114.0-2_amd64.deb">libpolkit-qt5-1-1</a></td>
               <td>0.114.0-2</td>
               <td>PolicyKit-qt5-1 library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/poppler/libpoppler-glib8_22.12.0-2+b1_amd64.deb">libpoppler-glib8</a></td>
               <td>22.12.0-2+b1</td>
               <td>PDF rendering library (GLib-based shared library)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/poppler/libpoppler-qt5-1_22.12.0-2+b1_amd64.deb">libpoppler-qt5-1</a></td>
               <td>22.12.0-2+b1</td>
               <td>PDF rendering library (Qt 5 based shared library)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
 
         </tbody>
@@ -648,10 +648,10 @@
     <section id="sponsor">
       <div class="sponsor">
         <div class="linija-dole mb-1"></div>
-        <p style="letter-spacing:1px;" class="pb-1 pt-1 text-white text-center">{{ site.data.strings.footnote-dev | replace: '[OpenBosniana OS]', '
-													<a href="##">OpenBosniana OS</a>' | replace: '[bosniana.org]', '
-													<a href="##">bosniana.org</a>' | replace: '[Denis Maslo]', '
-													<a href="##">Denis Maslo</a>' }}
+        <p style="letter-spacing:1px;" class="pb-1 pt-1 text-white text-center">
+													<a href="##">OpenBosniana OS</a> and
+													<a href="##">bosniana.org</a> developed by:
+													<a href="##">Denis Maslo</a>
         </p>
 
         <p style="letter-spacing:1px;" class="pb-1 pt-1 text-white text-center"><i class="ri-mail-send-line"></i> Private email:
