--- a/packages/24.html
+++ b/packages/24.html
@@ -223,350 +223,350 @@
               <td><a href="pool/main/p/poppler/libpoppler126_22.12.0-2+b1_amd64.deb">libpoppler126</a></td>
               <td>22.12.0-2+b1</td>
               <td>PDF rendering library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/popt/libpopt0_1.19+dfsg-1_amd64.deb">libpopt0</a></td>
               <td>1.19+dfsg-1</td>
               <td>lib for parsing cmdline parameters</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/f/ffmpeg/libpostproc56_5.1.6-0+deb12u1_amd64.deb">libpostproc56</a></td>
               <td>7:5.1.6-0+deb12u1</td>
               <td>FFmpeg library for post processing - runtime files</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/powerdevil/libpowerdevilcore2_5.27.5-2_amd64.deb">libpowerdevilcore2</a></td>
               <td>4:5.27.5-2</td>
               <td>Global power saver settings ui library.</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/powerdevil/libpowerdevilui5_5.27.5-2_amd64.deb">libpowerdevilui5</a></td>
               <td>4:5.27.5-2</td>
               <td>Global power saver settings ui library.</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/procps/libproc2-0_4.0.2-3_amd64.deb">libproc2-0</a></td>
               <td>2:4.0.2-3</td>
               <td>library for accessing process information from /proc</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libk/libksysguard/libprocesscore9_5.27.5-2_amd64.deb">libprocesscore9</a></td>
               <td>4:5.27.5-2</td>
               <td>library for system monitoring - processcore shared library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libk/libksysguard/libprocessui9_5.27.5-2_amd64.deb">libprocessui9</a></td>
               <td>4:5.27.5-2</td>
               <td>library for system monitoring - processui shared library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/protobuf-c/libprotobuf-c1_1.4.1-1+b1_amd64.deb">libprotobuf-c1</a></td>
               <td>1.4.1-1+b1</td>
               <td>Protocol Buffers C shared library (protobuf-c)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/protobuf/libprotobuf-lite32_3.21.12-3_amd64.deb">libprotobuf-lite32</a></td>
               <td>3.21.12-3</td>
               <td>protocol buffers C++ library (lite version)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libp/libproxy/libproxy-tools_0.4.18-1.2_amd64.deb">libproxy-tools</a></td>
               <td>0.4.18-1.2</td>
               <td>automatic proxy configuration management library (tools)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libp/libproxy/libproxy1v5_0.4.18-1.2_amd64.deb">libproxy1v5</a></td>
               <td>0.4.18-1.2</td>
               <td>automatic proxy configuration management library (shared)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/o/oath-toolkit/libpskc0_2.6.7-3.1_amd64.deb">libpskc0</a></td>
               <td>2.6.7-3.1</td>
               <td>OATH Toolkit Libpskc library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libp/libpsl/libpsl5_0.21.2-1_amd64.deb">libpsl5</a></td>
               <td>0.21.2-1</td>
               <td>Library for Public Suffix List (shared libraries)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/pulseaudio/libpulse-mainloop-glib0_16.1+dfsg1-2+b1_amd64.deb">libpulse-mainloop-glib0</a></td>
               <td>16.1+dfsg1-2+b1</td>
               <td>PulseAudio client libraries (glib support)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/pulseaudio/libpulse0_16.1+dfsg1-2+b1_amd64.deb">libpulse0</a></td>
               <td>16.1+dfsg1-2+b1</td>
               <td>PulseAudio client libraries</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/pulseaudio/libpulsedsp_16.1+dfsg1-2+b1_amd64.deb">libpulsedsp</a></td>
               <td>16.1+dfsg1-2+b1</td>
               <td>PulseAudio OSS pre-load library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/libp/libpwquality/libpwquality-common_1.4.5-1_all.deb">libpwquality-common</a></td>
               <td>1.4.5-1</td>
               <td>library for password quality checking and generation (data files)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libp/libpwquality/libpwquality1_1.4.5-1+b1_amd64.deb">libpwquality1</a></td>
               <td>1.4.5-1+b1</td>
               <td>library for password quality checking and generation</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/python3-defaults/libpython3-dev_3.11.2-1+b1_amd64.deb">libpython3-dev</a></td>
               <td>3.11.2-1+b1</td>
               <td>header files and a static library for Python (default)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/python3-defaults/libpython3-stdlib_3.11.2-1+b1_amd64.deb">libpython3-stdlib</a></td>
               <td>3.11.2-1+b1</td>
               <td>interactive high-level object-oriented language (default python3 version)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/python3.11/libpython3.11-minimal_3.11.2-6+deb12u4_amd64.deb">libpython3.11-minimal</a></td>
               <td>3.11.2-6+deb12u4</td>
               <td>Minimal subset of the Python language (version 3.11)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libq/libqaccessibilityclient/libqaccessibilityclient-qt5-0_0.4.1-1+b1_amd64.deb">libqaccessibilityclient-qt5-0</a></td>
               <td>0.4.1-1+b1</td>
               <td>helper to make writing accessibility tools easier</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/libq/libqalculate/libqalculate-data_4.5.1-1_all.deb">libqalculate-data</a></td>
               <td>4.5.1-1</td>
               <td>Powerful and easy to use desktop calculator - data</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libq/libqalculate/libqalculate22_4.5.1-1_amd64.deb">libqalculate22</a></td>
               <td>4.5.1-1</td>
               <td>Powerful and easy to use desktop calculator - library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/q/qca2/libqca-qt5-2_2.3.5-2_amd64.deb">libqca-qt5-2</a></td>
               <td>2.3.5-2</td>
               <td>libraries for the Qt Cryptographic Architecture</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/q/qca2/libqca-qt5-2-plugins_2.3.5-2_amd64.deb">libqca-qt5-2-plugins</a></td>
               <td>2.3.5-2</td>
               <td>QCA plugins for libqca2</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libq/libqmi/libqmi-glib5_1.32.2-1_amd64.deb">libqmi-glib5</a></td>
               <td>1.32.2-1</td>
               <td>Support library to use the Qualcomm MSM Interface (QMI) protocol</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libq/libqmi/libqmi-proxy_1.32.2-1_amd64.deb">libqmi-proxy</a></td>
               <td>1.32.2-1</td>
               <td>Proxy to communicate with QMI ports</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libq/libqmi/libqmi-utils_1.32.2-1_amd64.deb">libqmi-utils</a></td>
               <td>1.32.2-1</td>
               <td>Utilities to use the QMI protocol from the command line</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kdegraphics-mobipocket/libqmobipocket2_22.12.3-1_amd64.deb">libqmobipocket2</a></td>
               <td>4:22.12.3-1</td>
               <td>library for reading Mobipocket documents</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/q/qrencode/libqrencode4_4.1.1-1_amd64.deb">libqrencode4</a></td>
               <td>4.1.1-1</td>
               <td>QR Code encoding library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libq/libqrtr-glib/libqrtr-glib0_1.2.2-1_amd64.deb">libqrtr-glib0</a></td>
               <td>1.2.2-1</td>
               <td>Support library to use the QRTR protocol</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/q/qtbase-opensource-src/libqt5concurrent5_5.15.8+dfsg-11+deb12u2_amd64.deb">libqt5concurrent5</a></td>
               <td>5.15.8+dfsg-11+deb12u2</td>
               <td>Qt 5 concurrent module</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/q/qtbase-opensource-src/libqt5core5a_5.15.8+dfsg-11+deb12u2_amd64.deb">libqt5core5a</a></td>
               <td>5.15.8+dfsg-11+deb12u2</td>
               <td>Qt 5 core module</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/q/qtbase-opensource-src/libqt5dbus5_5.15.8+dfsg-11+deb12u2_amd64.deb">libqt5dbus5</a></td>
               <td>5.15.8+dfsg-11+deb12u2</td>
               <td>Qt 5 D-Bus module</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/q/qttools-opensource-src/libqt5designer5_5.15.8-2_amd64.deb">libqt5designer5</a></td>
               <td>5.15.8-2</td>
               <td>Qt 5 designer module</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/q/qtbase-opensource-src/libqt5gui5_5.15.8+dfsg-11+deb12u2_amd64.deb">libqt5gui5</a></td>
               <td>5.15.8+dfsg-11+deb12u2</td>
               <td>Qt 5 GUI module</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/q/qttools-opensource-src/libqt5help5_5.15.8-2_amd64.deb">libqt5help5</a></td>
               <td>5.15.8-2</td>
               <td>Qt 5 help module</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/q/qtmultimedia-opensource-src/libqt5multimedia5_5.15.8-2_amd64.deb">libqt5multimedia5</a></td>
               <td>5.15.8-2</td>
               <td>Qt 5 Multimedia module</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/q/qtmultimedia-opensource-src/libqt5multimedia5-plugins_5.15.8-2_amd64.deb">libqt5multimedia5-plugins</a></td>
               <td>5.15.8-2</td>
               <td>Qt 5 Multimedia module plugins</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/q/qtmultimedia-opensource-src/libqt5multimediagsttools5_5.15.8-2_amd64.deb">libqt5multimediagsttools5</a></td>
               <td>5.15.8-2</td>
               <td>GStreamer tools for  Qt 5 Multimedia module</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/q/qtmultimedia-opensource-src/libqt5multimediaquick5_5.15.8-2_amd64.deb">libqt5multimediaquick5</a></td>
               <td>5.15.8-2</td>
               <td>Qt 5 Multimedia Quick module</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/q/qtmultimedia-opensource-src/libqt5multimediawidgets5_5.15.8-2_amd64.deb">libqt5multimediawidgets5</a></td>
               <td>5.15.8-2</td>
               <td>Qt 5 Multimedia Widgets module</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/q/qtbase-opensource-src/libqt5network5_5.15.8+dfsg-11+deb12u2_amd64.deb">libqt5network5</a></td>
               <td>5.15.8+dfsg-11+deb12u2</td>
               <td>Qt 5 network module</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/q/qtlocation-opensource-src/libqt5positioning5_5.15.8+dfsg-3+deb12u1_amd64.deb">libqt5positioning5</a></td>
               <td>5.15.8+dfsg-3+deb12u1</td>
               <td>Qt Positioning module</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/q/qtbase-opensource-src/libqt5printsupport5_5.15.8+dfsg-11+deb12u2_amd64.deb">libqt5printsupport5</a></td>
               <td>5.15.8+dfsg-11+deb12u2</td>
               <td>Qt 5 print support module</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/q/qtdeclarative-opensource-src/libqt5qml5_5.15.8+dfsg-3_amd64.deb">libqt5qml5</a></td>
               <td>5.15.8+dfsg-3</td>
               <td>Qt 5 QML module</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/q/qtdeclarative-opensource-src/libqt5qmlmodels5_5.15.8+dfsg-3_amd64.deb">libqt5qmlmodels5</a></td>
               <td>5.15.8+dfsg-3</td>
               <td>Qt 5 QML Models library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/q/qtdeclarative-opensource-src/libqt5qmlworkerscript5_5.15.8+dfsg-3_amd64.deb">libqt5qmlworkerscript5</a></td>
               <td>5.15.8+dfsg-3</td>
               <td>Qt 5 QML Worker Script library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
 
         </tbody>
@@ -648,10 +648,10 @@
     <section id="sponsor">
       <div class="sponsor">
         <div class="linija-dole mb-1"></div>
-        <p style="letter-spacing:1px;" class="pb-1 pt-1 text-white text-center">{{ site.data.strings.footnote-dev | replace: '[OpenBosniana OS]', '
-													<a href="##">OpenBosniana OS</a>' | replace: '[bosniana.org]', '
-													<a href="##">bosniana.org</a>' | replace: '[Denis Maslo]', '
-													<a href="##">Denis Maslo</a>' }}
+        <p style="letter-spacing:1px;" class="pb-1 pt-1 text-white text-center">
+													<a href="##">OpenBosniana OS</a> and
+													<a href="##">bosniana.org</a> developed by:
+													<a href="##">Denis Maslo</a>
         </p>
 
         <p style="letter-spacing:1px;" class="pb-1 pt-1 text-white text-center"><i class="ri-mail-send-line"></i> Private email:
