--- a/packages/28.html
+++ b/packages/28.html
@@ -223,350 +223,350 @@
               <td><a href="pool/main/t/tpm2-tss/libtss2-tcti-mssim0_3.2.1-3_amd64.deb">libtss2-tcti-mssim0</a></td>
               <td>3.2.1-3</td>
               <td>TPM2 Software stack library - TSS and TCTI libraries</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/t/tpm2-tss/libtss2-tcti-swtpm0_3.2.1-3_amd64.deb">libtss2-tcti-swtpm0</a></td>
               <td>3.2.1-3</td>
               <td>TPM2 Software stack library - TSS and TCTI libraries</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/t/tpm2-tss/libtss2-tctildr0_3.2.1-3_amd64.deb">libtss2-tctildr0</a></td>
               <td>3.2.1-3</td>
               <td>TPM2 Software stack library - TSS and TCTI libraries</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/t/twolame/libtwolame0_0.4.0-2_amd64.deb">libtwolame0</a></td>
               <td>0.4.0-2</td>
               <td>MPEG Audio Layer 2 encoding library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gcc-12/libubsan1_12.2.0-14_amd64.deb">libubsan1</a></td>
               <td>12.2.0-14</td>
               <td>UBSan -- undefined behaviour sanitizer (runtime)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/u/uchardet/libuchardet0_0.0.7-1_amd64.deb">libuchardet0</a></td>
               <td>0.0.7-1</td>
               <td>universal charset detection library - shared library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/s/systemd/libudev1_252.30-1~deb12u2_amd64.deb">libudev1</a></td>
               <td>252.30-1~deb12u2</td>
               <td>libudev shared library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libu/libudfread/libudfread0_1.1.2-1_amd64.deb">libudfread0</a></td>
               <td>1.1.2-1</td>
               <td>UDF reader library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/u/udisks2/libudisks2-0_2.9.4-4_amd64.deb">libudisks2-0</a></td>
               <td>2.9.4-4</td>
               <td>GObject based library to access udisks2</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/u/unbound/libunbound8_1.17.1-2+deb12u2_amd64.deb">libunbound8</a></td>
               <td>1.17.1-2+deb12u2</td>
               <td>library implementing DNS resolution and validation</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libu/libunicode-linebreak-perl/libunicode-linebreak-perl_0.0.20190101-1+b5_amd64.deb">libunicode-linebreak-perl</a></td>
               <td>0.0.20190101-1+b5</td>
               <td>UAX #14 Unicode Line Breaking Algorithm</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libu/libunistring/libunistring2_1.0-2_amd64.deb">libunistring2</a></td>
               <td>1.0-2</td>
               <td>Unicode string library for C</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/l/llvm-toolchain-16/libunwind-16_16.0.6-15~deb12u1_amd64.deb">libunwind-16</a></td>
               <td>1:16.0.6-15~deb12u1</td>
               <td>production-quality unwinder</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libu/libunwind/libunwind8_1.6.2-3_amd64.deb">libunwind8</a></td>
               <td>1.6.2-3</td>
               <td>library to determine the call-chain of a program - runtime</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/pupnp-1.8/libupnp13_1.8.4-2_amd64.deb">libupnp13</a></td>
               <td>1:1.8.4-2</td>
               <td>Portable SDK for UPnP Devices, version 1.8 (shared library)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/u/upower/libupower-glib3_0.99.20-2_amd64.deb">libupower-glib3</a></td>
               <td>0.99.20-2</td>
               <td>abstraction for power management - shared library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libu/liburcu/liburcu8_0.13.2-1_amd64.deb">liburcu8</a></td>
               <td>0.13.2-1</td>
               <td>userspace RCU (read-copy-update) library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/libu/liburi-perl/liburi-perl_5.17-1_all.deb">liburi-perl</a></td>
               <td>5.17-1</td>
               <td>module to manipulate and access URI strings</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libu/liburing/liburing2_2.3-3_amd64.deb">liburing2</a></td>
               <td>2.3-3</td>
               <td>Linux kernel io_uring access library - shared library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libu/libusb-1.0/libusb-1.0-0_1.0.26-1_amd64.deb">libusb-1.0-0</a></td>
               <td>2:1.0.26-1</td>
               <td>userspace USB programming library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libu/libusbmuxd/libusbmuxd6_2.0.2-3_amd64.deb">libusbmuxd6</a></td>
               <td>2.0.2-3</td>
               <td>USB multiplexor daemon for iPhone and iPod Touch devices - library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libu/libutempter/libutempter0_1.2.1-3_amd64.deb">libutempter0</a></td>
               <td>1.2.1-3</td>
               <td>privileged helper for utmp/wtmp updates (runtime)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/u/util-linux/libuuid1_2.38.1-5+deb12u1_amd64.deb">libuuid1</a></td>
               <td>2.38.1-5+deb12u1</td>
               <td>Universally Unique ID library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libu/libuv1/libuv1_1.44.2-1+deb12u1_amd64.deb">libuv1</a></td>
               <td>1.44.2-1+deb12u1</td>
               <td>asynchronous event notification library - runtime library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/v/v4l-utils/libv4l-0_1.22.1-5+b2_amd64.deb">libv4l-0</a></td>
               <td>1.22.1-5+b2</td>
               <td>Collection of video4linux support libraries</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/v/v4l-utils/libv4lconvert0_1.22.1-5+b2_amd64.deb">libv4lconvert0</a></td>
               <td>1.22.1-5+b2</td>
               <td>Video4linux frame format conversion library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libv/libva/libva-drm2_2.17.0-1_amd64.deb">libva-drm2</a></td>
               <td>2.17.0-1</td>
               <td>Video Acceleration (VA) API for Linux -- DRM runtime</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libv/libva/libva-wayland2_2.17.0-1_amd64.deb">libva-wayland2</a></td>
               <td>2.17.0-1</td>
               <td>Video Acceleration (VA) API for Linux -- Wayland runtime</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libv/libva/libva-x11-2_2.17.0-1_amd64.deb">libva-x11-2</a></td>
               <td>2.17.0-1</td>
               <td>Video Acceleration (VA) API for Linux -- X11 runtime</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libv/libva/libva2_2.17.0-1_amd64.deb">libva2</a></td>
               <td>2.17.0-1</td>
               <td>Video Acceleration (VA) API for Linux -- runtime</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libv/libvdpau-va-gl/libvdpau-va-gl1_0.4.2-1+b1_amd64.deb">libvdpau-va-gl1</a></td>
               <td>0.4.2-1+b1</td>
               <td>VDPAU driver with OpenGL/VAAPI backend</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libv/libvdpau/libvdpau1_1.5-2_amd64.deb">libvdpau1</a></td>
               <td>1.5-2</td>
               <td>Video Decode and Presentation API for Unix (libraries)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libv/libvidstab/libvidstab1.1_1.1.0-2+b1_amd64.deb">libvidstab1.1</a></td>
               <td>1.1.0-2+b1</td>
               <td>video stabilization library (shared library)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libv/libvisual/libvisual-0.4-0_0.4.0-19_amd64.deb">libvisual-0.4-0</a></td>
               <td>0.4.0-19</td>
               <td>audio visualization framework</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/v/vlc/libvlc-bin_3.0.21-0+deb12u1_amd64.deb">libvlc-bin</a></td>
               <td>3.0.21-0+deb12u1</td>
               <td>tools for VLC's base library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/v/vlc/libvlc5_3.0.21-0+deb12u1_amd64.deb">libvlc5</a></td>
               <td>3.0.21-0+deb12u1</td>
               <td>multimedia player and streamer library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/v/vlc/libvlccore9_3.0.21-0+deb12u1_amd64.deb">libvlccore9</a></td>
               <td>3.0.21-0+deb12u1</td>
               <td>base library for VLC and its modules</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libv/libvncserver/libvncclient1_0.9.14+dfsg-1_amd64.deb">libvncclient1</a></td>
               <td>0.9.14+dfsg-1</td>
               <td>API to write one's own VNC server - client library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/v/vo-aacenc/libvo-aacenc0_0.1.3-2_amd64.deb">libvo-aacenc0</a></td>
               <td>0.1.3-2</td>
               <td>VisualOn AAC encoder library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/v/vo-amrwbenc/libvo-amrwbenc0_0.1.3-2_amd64.deb">libvo-amrwbenc0</a></td>
               <td>0.1.3-2</td>
               <td>VisualOn AMR-WB encoder library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libv/libvoikko/libvoikko1_4.3.1-1+b1_amd64.deb">libvoikko1</a></td>
               <td>4.3.1-1+b1</td>
               <td>Library of free natural language processing tools</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/v/volume-key/libvolume-key1_0.3.12-5+b1_amd64.deb">libvolume-key1</a></td>
               <td>0.3.12-5+b1</td>
               <td>Library for manipulating storage encryption keys and passphrases</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libv/libvorbis/libvorbis0a_1.3.7-1_amd64.deb">libvorbis0a</a></td>
               <td>1.3.7-1</td>
               <td>decoder library for Vorbis General Audio Compression Codec</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libv/libvorbis/libvorbisenc2_1.3.7-1_amd64.deb">libvorbisenc2</a></td>
               <td>1.3.7-1</td>
               <td>encoder library for Vorbis General Audio Compression Codec</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libv/libvorbis/libvorbisfile3_1.3.7-1_amd64.deb">libvorbisfile3</a></td>
               <td>1.3.7-1</td>
               <td>high-level API for Vorbis General Audio Compression Codec</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libv/libvpx/libvpx7_1.12.0-1+deb12u3_amd64.deb">libvpx7</a></td>
               <td>1.12.0-1+deb12u3</td>
               <td>VP8 and VP9 video codec (shared library)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/v/vte2.91/libvte-2.91-0_0.70.6-2~deb12u1_amd64.deb">libvte-2.91-0</a></td>
               <td>0.70.6-2~deb12u1</td>
               <td>Terminal emulator widget for GTK+ 3.0 - runtime files</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/v/vte2.91/libvte-2.91-common_0.70.6-2~deb12u1_amd64.deb">libvte-2.91-common</a></td>
               <td>0.70.6-2~deb12u1</td>
               <td>Terminal emulator widget for GTK+ 3.0 - common files</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/v/vulkan-loader/libvulkan1_1.3.239.0-1_amd64.deb">libvulkan1</a></td>
               <td>1.3.239.0-1</td>
               <td>Vulkan loader library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/libw/libwacom/libwacom-common_2.6.0-1_all.deb">libwacom-common</a></td>
               <td>2.6.0-1</td>
               <td>Wacom model feature query library (common files)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
 
         </tbody>
@@ -648,10 +648,10 @@
     <section id="sponsor">
       <div class="sponsor">
         <div class="linija-dole mb-1"></div>
-        <p style="letter-spacing:1px;" class="pb-1 pt-1 text-white text-center">{{ site.data.strings.footnote-dev | replace: '[OpenBosniana OS]', '
-													<a href="##">OpenBosniana OS</a>' | replace: '[bosniana.org]', '
-													<a href="##">bosniana.org</a>' | replace: '[Denis Maslo]', '
-													<a href="##">Denis Maslo</a>' }}
+        <p style="letter-spacing:1px;" class="pb-1 pt-1 text-white text-center">
+													<a href="##">OpenBosniana OS</a> and
+													<a href="##">bosniana.org</a> developed by:
+													<a href="##">Denis Maslo</a>
         </p>
 
         <p style="letter-spacing:1px;" class="pb-1 pt-1 text-white text-center"><i class="ri-mail-send-line"></i> Private email:
