--- a/packages/3.html
+++ b/packages/3.html
@@ -223,350 +223,350 @@
               <td><a href="pool/main/c/cpio/cpio_2.13+dfsg-7.1_amd64.deb">cpio</a></td>
               <td>2.13+dfsg-7.1</td>
               <td>GNU cpio -- a program to manage archives of files</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gcc-defaults/cpp_12.2.0-3_amd64.deb">cpp</a></td>
               <td>4:12.2.0-3</td>
               <td>GNU C preprocessor (cpp)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gcc-12/cpp-12_12.2.0-14_amd64.deb">cpp-12</a></td>
               <td>12.2.0-14</td>
               <td>GNU C preprocessor</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/c/cracklib2/cracklib-runtime_2.9.6-5+b1_amd64.deb">cracklib-runtime</a></td>
               <td>2.9.6-5+b1</td>
               <td>runtime support for password checker library cracklib2</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/c/cron/cron_3.0pl1-162_amd64.deb">cron</a></td>
               <td>3.0pl1-162</td>
               <td>process scheduling daemon</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/c/cron/cron-daemon-common_3.0pl1-162_all.deb">cron-daemon-common</a></td>
               <td>3.0pl1-162</td>
               <td>process scheduling daemon's configuration files</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/c/crun/crun_1.8.1-1+deb12u1_amd64.deb">crun</a></td>
               <td>1.8.1-1+deb12u1</td>
               <td>lightweight OCI runtime for running containers</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/c/cryfs/cryfs_0.11.3-5_amd64.deb">cryfs</a></td>
               <td>0.11.3-5</td>
               <td>encrypt your files and store them in the cloud</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/c/cryptsetup/cryptsetup_2.6.1-4~deb12u2_amd64.deb">cryptsetup</a></td>
               <td>2:2.6.1-4~deb12u2</td>
               <td>disk encryption support - startup scripts</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/c/cryptsetup/cryptsetup-bin_2.6.1-4~deb12u2_amd64.deb">cryptsetup-bin</a></td>
               <td>2:2.6.1-4~deb12u2</td>
               <td>disk encryption support - command line tools</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/c/cryptsetup/cryptsetup-initramfs_2.6.1-4~deb12u2_all.deb">cryptsetup-initramfs</a></td>
               <td>2:2.6.1-4~deb12u2</td>
               <td>disk encryption support - initramfs integration</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/c/cryptsetup-nuke-password/cryptsetup-nuke-password_4+openbosniana1_amd64.deb">cryptsetup-nuke-password</a></td>
               <td>4+openbosniana1</td>
               <td>Erase the LUKS keys with a special password on the unlock prompt</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/c/cups/cups_2.4.2-3+deb12u7_amd64.deb">cups</a></td>
               <td>2.4.2-3+deb12u7</td>
               <td>Common UNIX Printing System(tm) - PPD/driver support, web interface</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/c/cups-filters/cups-browsed_1.28.17-3_amd64.deb">cups-browsed</a></td>
               <td>1.28.17-3</td>
               <td>OpenPrinting CUPS Filters - cups-browsed</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/c/cups/cups-bsd_2.4.2-3+deb12u7_amd64.deb">cups-bsd</a></td>
               <td>2.4.2-3+deb12u7</td>
               <td>Common UNIX Printing System(tm) - BSD commands</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/c/cups/cups-client_2.4.2-3+deb12u7_amd64.deb">cups-client</a></td>
               <td>2.4.2-3+deb12u7</td>
               <td>Common UNIX Printing System(tm) - client programs (SysV)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/c/cups/cups-common_2.4.2-3+deb12u7_all.deb">cups-common</a></td>
               <td>2.4.2-3+deb12u7</td>
               <td>Common UNIX Printing System(tm) - common files</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/c/cups/cups-core-drivers_2.4.2-3+deb12u7_amd64.deb">cups-core-drivers</a></td>
               <td>2.4.2-3+deb12u7</td>
               <td>Common UNIX Printing System(tm) - driverless printing</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/c/cups/cups-daemon_2.4.2-3+deb12u7_amd64.deb">cups-daemon</a></td>
               <td>2.4.2-3+deb12u7</td>
               <td>Common UNIX Printing System(tm) - daemon</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/c/cups-filters/cups-filters_1.28.17-3_amd64.deb">cups-filters</a></td>
               <td>1.28.17-3</td>
               <td>OpenPrinting CUPS Filters - Main Package</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/c/cups-filters/cups-filters-core-drivers_1.28.17-3_amd64.deb">cups-filters-core-drivers</a></td>
               <td>1.28.17-3</td>
               <td>OpenPrinting CUPS Filters - Driverless printing</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/c/cups/cups-ipp-utils_2.4.2-3+deb12u7_amd64.deb">cups-ipp-utils</a></td>
               <td>2.4.2-3+deb12u7</td>
               <td>Common UNIX Printing System(tm) - IPP developer/admin utilities</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/c/cups-pk-helper/cups-pk-helper_0.2.6-1+b1_amd64.deb">cups-pk-helper</a></td>
               <td>0.2.6-1+b1</td>
               <td>PolicyKit helper to configure cups with fine-grained privileges</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/c/cups/cups-ppdc_2.4.2-3+deb12u7_amd64.deb">cups-ppdc</a></td>
               <td>2.4.2-3+deb12u7</td>
               <td>Common UNIX Printing System(tm) - PPD manipulation utilities</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/c/cups/cups-server-common_2.4.2-3+deb12u7_all.deb">cups-server-common</a></td>
               <td>2.4.2-3+deb12u7</td>
               <td>Common UNIX Printing System(tm) - server common files</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/c/curl/curl_7.88.1-10+deb12u7_amd64.deb">curl</a></td>
               <td>7.88.1-10+deb12u7</td>
               <td>command line tool for transferring data with URL syntax</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/d/dash/dash_0.5.12-2_amd64.deb">dash</a></td>
               <td>0.5.12-2</td>
               <td>POSIX-compliant shell</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/d/dbus/dbus_1.14.10-1~deb12u1_amd64.deb">dbus</a></td>
               <td>1.14.10-1~deb12u1</td>
               <td>simple interprocess messaging system (system message bus)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/d/dbus/dbus-bin_1.14.10-1~deb12u1_amd64.deb">dbus-bin</a></td>
               <td>1.14.10-1~deb12u1</td>
               <td>simple interprocess messaging system (command line utilities)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/d/dbus/dbus-daemon_1.14.10-1~deb12u1_amd64.deb">dbus-daemon</a></td>
               <td>1.14.10-1~deb12u1</td>
               <td>simple interprocess messaging system (reference message bus)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/d/dbus/dbus-session-bus-common_1.14.10-1~deb12u1_all.deb">dbus-session-bus-common</a></td>
               <td>1.14.10-1~deb12u1</td>
               <td>simple interprocess messaging system (session bus configuration)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/d/dbus/dbus-system-bus-common_1.14.10-1~deb12u1_all.deb">dbus-system-bus-common</a></td>
               <td>1.14.10-1~deb12u1</td>
               <td>simple interprocess messaging system (system bus configuration)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/d/dbus/dbus-user-session_1.14.10-1~deb12u1_amd64.deb">dbus-user-session</a></td>
               <td>1.14.10-1~deb12u1</td>
               <td>simple interprocess messaging system (systemd --user integration)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/b/bc/dc_1.07.1-3+b1_amd64.deb">dc</a></td>
               <td>1.07.1-3+b1</td>
               <td>GNU dc arbitrary precision reverse-polish calculator</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/d/dconf/dconf-cli_0.40.0-4_amd64.deb">dconf-cli</a></td>
               <td>0.40.0-4</td>
               <td>simple configuration storage system - utilities</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/d/dconf/dconf-gsettings-backend_0.40.0-4_amd64.deb">dconf-gsettings-backend</a></td>
               <td>0.40.0-4</td>
               <td>simple configuration storage system - GSettings back-end</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/d/dconf/dconf-service_0.40.0-4_amd64.deb">dconf-service</a></td>
               <td>0.40.0-4</td>
               <td>simple configuration storage system - D-Bus service</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/d/dctrl-tools/dctrl-tools_2.24-3+b1_amd64.deb">dctrl-tools</a></td>
               <td>2.24-3+b1</td>
               <td>Command-line tools to process Debian package information</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/d/debconf/debconf_1.5.82_all.deb">debconf</a></td>
               <td>1.5.82</td>
               <td>Debian configuration management system</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/d/debconf/debconf-i18n_1.5.82_all.deb">debconf-i18n</a></td>
               <td>1.5.82</td>
               <td>full internationalization support for debconf</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/d/debconf-kde/debconf-kde-data_1.1.0-1_all.deb">debconf-kde-data</a></td>
               <td>1.1.0-1</td>
               <td>Debconf KDE data files</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/d/debconf-kde/debconf-kde-helper_1.1.0-1_amd64.deb">debconf-kde-helper</a></td>
               <td>1.1.0-1</td>
               <td>Debconf KDE GUI frontend tool</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/d/debian-archive-keyring/debian-archive-keyring_2023.3+deb12u1_all.deb">debian-archive-keyring</a></td>
               <td>2023.3+deb12u1</td>
               <td>GnuPG archive keys of the Debian archive</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/d/debian-faq/debian-faq_11.1_all.deb">debian-faq</a></td>
               <td>11.1</td>
               <td>Debian Frequently Asked Questions</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/d/debianutils/debianutils_5.7-0.5~deb12u1_amd64.deb">debianutils</a></td>
               <td>5.7-0.5~deb12u1</td>
               <td>Miscellaneous utilities specific to Debian</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/j/java-common/default-jdk_1.17-74_amd64.deb">default-jdk</a></td>
               <td>2:1.17-74</td>
               <td>Standard Java or Java compatible Development Kit</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/j/java-common/default-jdk-headless_1.17-74_amd64.deb">default-jdk-headless</a></td>
               <td>2:1.17-74</td>
               <td>Standard Java or Java compatible Development Kit (headless)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/j/java-common/default-jre_1.17-74_amd64.deb">default-jre</a></td>
               <td>2:1.17-74</td>
               <td>Standard Java or Java compatible Runtime</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/j/java-common/default-jre-headless_1.17-74_amd64.deb">default-jre-headless</a></td>
               <td>2:1.17-74</td>
               <td>Standard Java or Java compatible Runtime (headless)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/m/mysql-defaults/default-mysql-client-core_1.1.0_all.deb">default-mysql-client-core</a></td>
               <td>1.1.0</td>
               <td>MySQL database core client binaries (metapackage)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
 
         </tbody>
@@ -648,10 +648,10 @@
     <section id="sponsor">
       <div class="sponsor">
         <div class="linija-dole mb-1"></div>
-        <p style="letter-spacing:1px;" class="pb-1 pt-1 text-white text-center">{{ site.data.strings.footnote-dev | replace: '[OpenBosniana OS]', '
-													<a href="##">OpenBosniana OS</a>' | replace: '[bosniana.org]', '
-													<a href="##">bosniana.org</a>' | replace: '[Denis Maslo]', '
-													<a href="##">Denis Maslo</a>' }}
+        <p style="letter-spacing:1px;" class="pb-1 pt-1 text-white text-center">
+													<a href="##">OpenBosniana OS</a> and
+													<a href="##">bosniana.org</a> developed by:
+													<a href="##">Denis Maslo</a>
         </p>
 
         <p style="letter-spacing:1px;" class="pb-1 pt-1 text-white text-center"><i class="ri-mail-send-line"></i> Private email:
