--- a/packages/32.html
+++ b/packages/32.html
@@ -223,350 +223,350 @@
               <td><a href="pool/main/m/mawk/mawk_1.3.4.20200120-3.1_amd64.deb">mawk</a></td>
               <td>1.3.4.20200120-3.1</td>
               <td>Pattern scanning and text processing language</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/m/mdadm/mdadm_4.2-5_amd64.deb">mdadm</a></td>
               <td>4.2-5</td>
               <td>Tool to administer Linux MD arrays (software RAID)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/m/media-player-info/media-player-info_24-2_all.deb">media-player-info</a></td>
               <td>24-2</td>
               <td>Media player identification files</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/m/media-types/media-types_10.0.0_all.deb">media-types</a></td>
               <td>10.0.0</td>
               <td>List of standard media types and their usual file extension</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/m/mesa-demos/mesa-utils_8.5.0-1_amd64.deb">mesa-utils</a></td>
               <td>8.5.0-1</td>
               <td>Miscellaneous Mesa utilities -- symlinks</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/m/mesa-demos/mesa-utils-bin_8.5.0-1_amd64.deb">mesa-utils-bin</a></td>
               <td>8.5.0-1</td>
               <td>Miscellaneous Mesa utilities -- native applications</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/m/mesa/mesa-va-drivers_22.3.6-1+deb12u1_amd64.deb">mesa-va-drivers</a></td>
               <td>22.3.6-1+deb12u1</td>
               <td>Mesa VA-API video acceleration drivers</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/m/mesa/mesa-vdpau-drivers_22.3.6-1+deb12u1_amd64.deb">mesa-vdpau-drivers</a></td>
               <td>22.3.6-1+deb12u1</td>
               <td>Mesa VDPAU video acceleration drivers</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/m/mesa/mesa-vulkan-drivers_22.3.6-1+deb12u1_amd64.deb">mesa-vulkan-drivers</a></td>
               <td>22.3.6-1+deb12u1</td>
               <td>Mesa Vulkan graphics drivers</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/m/metadata-cleaner/metadata-cleaner_2.4.0+ds-1_amd64.deb">metadata-cleaner</a></td>
               <td>2.4.0+ds-1</td>
               <td>GTK app for viewing and cleaning metadata in files</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/m/milou/milou_5.27.5-2_amd64.deb">milou</a></td>
               <td>4:5.27.5-2</td>
               <td>Dedicated search plasmoid</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/m/mime-support/mime-support_3.66_all.deb">mime-support</a></td>
               <td>3.66</td>
               <td>transitional package</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/m/mobile-broadband-provider-info/mobile-broadband-provider-info_20230416-1_all.deb">mobile-broadband-provider-info</a></td>
               <td>20230416-1</td>
               <td>database of mobile broadband service providers</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/m/modemmanager/modemmanager_1.20.4-1_amd64.deb">modemmanager</a></td>
               <td>1.20.4-1</td>
               <td>D-Bus service for managing modems</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/m/moreutils/moreutils_0.67-1_amd64.deb">moreutils</a></td>
               <td>0.67-1</td>
               <td>additional Unix utilities</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/u/util-linux/mount_2.38.1-5+deb12u1_amd64.deb">mount</a></td>
               <td>2.38.1-5+deb12u1</td>
               <td>tools for mounting and manipulating filesystems</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/m/mtools/mtools_4.0.33-1+really4.0.32-1_amd64.deb">mtools</a></td>
               <td>4.0.33-1+really4.0.32-1</td>
               <td>Tools for manipulating MSDOS files</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/m/mysql-defaults/mysql-common_5.8+1.1.0_all.deb">mysql-common</a></td>
               <td>5.8+1.1.0</td>
               <td>MySQL database common files, e.g. /etc/mysql/my.cnf</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/n/nano/nano_7.2-1+deb12u1_amd64.deb">nano</a></td>
               <td>7.2-1+deb12u1</td>
               <td>small, friendly text editor inspired by Pico</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/ncurses/ncurses-base_6.4-4_all.deb">ncurses-base</a></td>
               <td>6.4-4</td>
               <td>basic terminal type definitions</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/n/ncurses/ncurses-bin_6.4-4_amd64.deb">ncurses-bin</a></td>
               <td>6.4-4</td>
               <td>terminal-related programs and man pages</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/ncurses/ncurses-term_6.4-4_all.deb">ncurses-term</a></td>
               <td>6.4-4</td>
               <td>additional terminal type definitions</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/n/net-tools/net-tools_2.10-0.1_amd64.deb">net-tools</a></td>
               <td>2.10-0.1</td>
               <td>NET-3 networking toolkit</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/n/netavark/netavark_1.4.0-3_amd64.deb">netavark</a></td>
               <td>1.4.0-3</td>
               <td>Rust based network stack for containers</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/netbase/netbase_6.4_all.deb">netbase</a></td>
               <td>6.4</td>
               <td>Basic TCP/IP networking system</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/n/netcat-openbsd/netcat-openbsd_1.219-1_amd64.deb">netcat-openbsd</a></td>
               <td>1.219-1</td>
               <td>TCP/IP swiss army knife</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/n/netcat/netcat-traditional_1.10-47_amd64.deb">netcat-traditional</a></td>
               <td>1.10-47</td>
               <td>TCP/IP swiss army knife</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/n/netpbm-free/netpbm_11.01.00-2_amd64.deb">netpbm</a></td>
               <td>2:11.01.00-2</td>
               <td>Graphics conversion tools between image formats</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/n/network-manager/network-manager_1.42.4-1_amd64.deb">network-manager</a></td>
               <td>1.42.4-1</td>
               <td>network management framework (daemon and userspace tools)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/n/nftables/nftables_1.0.6-2+deb12u2_amd64.deb">nftables</a></td>
               <td>1.0.6-2+deb12u2</td>
               <td>Program to control packet filtering rules by Netfilter project</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-abbrev/node-abbrev_1.1.1+~1.1.2-1_all.deb">node-abbrev</a></td>
               <td>1.1.1+~1.1.2-1</td>
               <td>Get unique abbreviations for a set of strings - Node.js module</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/a/acorn/node-acorn_8.8.1+ds+~cs25.17.7-2_all.deb">node-acorn</a></td>
               <td>8.8.1+ds+~cs25.17.7-2</td>
               <td>ECMAScript parser for Node.js</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-agent-base/node-agent-base_6.0.2+~cs5.4.2-2_all.deb">node-agent-base</a></td>
               <td>6.0.2+~cs5.4.2-2</td>
               <td>Turn a function into an http.Agent instance</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-ajv/node-ajv_6.12.6-3_all.deb">node-ajv</a></td>
               <td>6.12.6-3</td>
               <td>another JSON Schema Validator</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-ajv-keywords/node-ajv-keywords_3.5.2-2_all.deb">node-ajv-keywords</a></td>
               <td>3.5.2-2</td>
               <td>Custom JSON-Schema keywords for Ajv validator</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-ampproject-remapping/node-ampproject-remapping_2.2.0+~cs5.15.37-1_all.deb">node-ampproject-remapping</a></td>
               <td>2.2.0+~cs5.15.37-1</td>
               <td>Nodejs module to remap sequential sourcemaps through transformations</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-ansi-escapes/node-ansi-escapes_5.0.0+really.4.3.1-1_all.deb">node-ansi-escapes</a></td>
               <td>5.0.0+really.4.3.1-1</td>
               <td>ANSI escape codes for manipulating the terminal</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-ansi-regex/node-ansi-regex_5.0.1-1_all.deb">node-ansi-regex</a></td>
               <td>5.0.1-1</td>
               <td>regular expression for matching ANSI escape codes</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-ansi-styles/node-ansi-styles_6.2.1-2_all.deb">node-ansi-styles</a></td>
               <td>6.2.1-2</td>
               <td>ANSI escape codes for styling strings in the terminal with Node.js</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-anymatch/node-anymatch_3.1.3+~cs4.6.1-2_all.deb">node-anymatch</a></td>
               <td>3.1.3+~cs4.6.1-2</td>
               <td>Matches strings against configurable strings</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-aproba/node-aproba_2.0.0-3_all.deb">node-aproba</a></td>
               <td>2.0.0-3</td>
               <td>light-weight argument validator</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-archy/node-archy_1.0.0-6_all.deb">node-archy</a></td>
               <td>1.0.0-6</td>
               <td>Pretty-print nested hierarchies module for Node.js</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-are-we-there-yet/node-are-we-there-yet_3.0.1+~1.1.0-1_all.deb">node-are-we-there-yet</a></td>
               <td>3.0.1+~1.1.0-1</td>
               <td>Keep track of the overall completion of many disparate processes</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-argparse/node-argparse_2.0.1-2_all.deb">node-argparse</a></td>
               <td>2.0.1-2</td>
               <td>CLI arguments parser for node.js</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-arrify/node-arrify_2.0.1-3_all.deb">node-arrify</a></td>
               <td>2.0.1-3</td>
               <td>Convert a value to an array</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-assert/node-assert_2.0.0+~cs3.9.8-2_all.deb">node-assert</a></td>
               <td>2.0.0+~cs3.9.8-2</td>
               <td>simple assertion library for javascript</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-async/node-async_0.8.0-6_all.deb">node-async</a></td>
               <td>0.8.0-6</td>
               <td>functions and patterns for asynchronous code - Node.js</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-async-each/node-async-each_1.0.3-3_all.deb">node-async-each</a></td>
               <td>1.0.3-3</td>
               <td>async parallel forEach / map function for JavaScript</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-auto-bind/node-auto-bind_4.0.0-2_all.deb">node-auto-bind</a></td>
               <td>4.0.0-2</td>
               <td>Automatically bind methods to their class instance</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-babel-polyfills/node-babel-helper-define-polyfill-provider_0.3.3~0~20220913+ds1-1_all.deb">node-babel-helper-define-polyfill-provider</a></td>
               <td>0.3.3~0~20220913+ds1-1</td>
               <td>node-babel helper for polyfills</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
 
         </tbody>
@@ -648,10 +648,10 @@
     <section id="sponsor">
       <div class="sponsor">
         <div class="linija-dole mb-1"></div>
-        <p style="letter-spacing:1px;" class="pb-1 pt-1 text-white text-center">{{ site.data.strings.footnote-dev | replace: '[OpenBosniana OS]', '
-													<a href="##">OpenBosniana OS</a>' | replace: '[bosniana.org]', '
-													<a href="##">bosniana.org</a>' | replace: '[Denis Maslo]', '
-													<a href="##">Denis Maslo</a>' }}
+        <p style="letter-spacing:1px;" class="pb-1 pt-1 text-white text-center">
+													<a href="##">OpenBosniana OS</a> and
+													<a href="##">bosniana.org</a> developed by:
+													<a href="##">Denis Maslo</a>
         </p>
 
         <p style="letter-spacing:1px;" class="pb-1 pt-1 text-white text-center"><i class="ri-mail-send-line"></i> Private email:
