--- a/packages/35.html
+++ b/packages/35.html
@@ -223,350 +223,350 @@
               <td><a href="pool/main/n/node-for-own/node-for-own_1.0.0-3_all.deb">node-for-own</a></td>
               <td>1.0.0-3</td>
               <td>Iterate over the own enumerable properties of an object</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-foreground-child/node-foreground-child_2.0.0-5_all.deb">node-foreground-child</a></td>
               <td>2.0.0-5</td>
               <td>helper running a child process as a foreground process</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-fs-readdir-recursive/node-fs-readdir-recursive_1.1.0+~1.1.0-1_all.deb">node-fs-readdir-recursive</a></td>
               <td>1.1.0+~1.1.0-1</td>
               <td>Recursively read a directory</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-fs-write-stream-atomic/node-fs-write-stream-atomic_1.0.10-6_all.deb">node-fs-write-stream-atomic</a></td>
               <td>1.0.10-6</td>
               <td>Like fs.createWriteStream(...), but atomic</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-fs.realpath/node-fs.realpath_1.0.0-3_all.deb">node-fs.realpath</a></td>
               <td>1.0.0-3</td>
               <td>Use node's fs.realpath</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-function-bind/node-function-bind_1.1.1+repacked+~1.0.3-2_all.deb">node-function-bind</a></td>
               <td>1.1.1+repacked+~1.0.3-2</td>
               <td>Implementation of Function.prototype.bind</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-functional-red-black-tree/node-functional-red-black-tree_1.0.1+20181105-7_all.deb">node-functional-red-black-tree</a></td>
               <td>1.0.1+20181105-7</td>
               <td>fully persistent balanced binary search tree - Node.js library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-gauge/node-gauge_4.0.4-1_all.deb">node-gauge</a></td>
               <td>4.0.4-1</td>
               <td>terminal based horizontal progress bar</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-get-caller-file/node-get-caller-file_2.0.5+~cs1.1.1-4_all.deb">node-get-caller-file</a></td>
               <td>2.0.5+~cs1.1.1-4</td>
               <td>inspects the v8 stack trace</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-get-stream/node-get-stream_6.0.1-1_all.deb">node-get-stream</a></td>
               <td>6.0.1-1</td>
               <td>Get a stream as a string, buffer, or array</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-get-value/node-get-value_3.0.1-4_all.deb">node-get-value</a></td>
               <td>1:3.0.1-4</td>
               <td>Use property paths to get a nested value from an object</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-glob/node-glob_8.0.3+~cs8.4.15-1_all.deb">node-glob</a></td>
               <td>8.0.3+~cs8.4.15-1</td>
               <td>glob functionality for Node.js</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-glob-parent/node-glob-parent_6.0.2+~5.1.1-2_all.deb">node-glob-parent</a></td>
               <td>6.0.2+~5.1.1-2</td>
               <td>Extract the non-magic parent path from a glob string</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-globals/node-globals_13.18.0-1_all.deb">node-globals</a></td>
               <td>13.18.0-1</td>
               <td>Global identifiers from different JavaScript environments</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-globby/node-globby_13.1.3+~cs16.25.40-1_all.deb">node-globby</a></td>
               <td>13.1.3+~cs16.25.40-1</td>
               <td>Extends glob with promise API</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-got/node-got_11.8.5+~cs58.13.36-3_all.deb">node-got</a></td>
               <td>11.8.5+~cs58.13.36-3</td>
               <td>Simplified HTTP requests</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-graceful-fs/node-graceful-fs_4.2.10-1_all.deb">node-graceful-fs</a></td>
               <td>4.2.10-1</td>
               <td>drop-in replacement improving the Node.js fs module</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-growl/node-growl_1.10.5-4_all.deb">node-growl</a></td>
               <td>1.10.5-4</td>
               <td>unobtrusive notification system for nodejs</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-gyp/node-gyp_9.3.0-2_all.deb">node-gyp</a></td>
               <td>9.3.0-2</td>
               <td>Native addon build tool for Node.js</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-has-flag/node-has-flag_4.0.0-3_all.deb">node-has-flag</a></td>
               <td>4.0.0-3</td>
               <td>check if argv has a specific flag</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-has-unicode/node-has-unicode_2.0.1-5_all.deb">node-has-unicode</a></td>
               <td>2.0.1-5</td>
               <td>Try to guess if your terminal supports unicode</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-has-value/node-has-value_2.0.2-4_all.deb">node-has-value</a></td>
               <td>2.0.2-4</td>
               <td>node library that returns true if a value exists</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-has-values/node-has-values_2.0.1-4_all.deb">node-has-values</a></td>
               <td>2.0.1-4</td>
               <td>node library that returns true if any values exist</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-hosted-git-info/node-hosted-git-info_6.1.1-2_all.deb">node-hosted-git-info</a></td>
               <td>6.1.1-2</td>
               <td>Provides metadata from Github, Bitbucket and Gitlab</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-https-proxy-agent/node-https-proxy-agent_5.0.1+~cs8.0.0-3_all.deb">node-https-proxy-agent</a></td>
               <td>5.0.1+~cs8.0.0-3</td>
               <td>HTTP(s) proxy http.Agent implementation for HTTPS</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-iconv-lite/node-iconv-lite_0.6.3-3_all.deb">node-iconv-lite</a></td>
               <td>0.6.3-3</td>
               <td>Pure JS character encoding conversion</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-icss-utils/node-icss-utils_5.1.0+~5.1.0-1_all.deb">node-icss-utils</a></td>
               <td>5.1.0+~5.1.0-1</td>
               <td>ICSS utils for postcss ast</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-ieee754/node-ieee754_1.2.1-3_all.deb">node-ieee754</a></td>
               <td>1.2.1-3</td>
               <td>Node.js module to read or write IEEE754 floating point numbers</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-iferr/node-iferr_1.0.2+~1.0.2-1_all.deb">node-iferr</a></td>
               <td>1.0.2+~1.0.2-1</td>
               <td>Higher-order functions for easier error handling</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-ignore/node-ignore_5.2.1-1_all.deb">node-ignore</a></td>
               <td>5.2.1-1</td>
               <td>manager and filter for .gitignore rules - Node.js library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-imurmurhash/node-imurmurhash_0.1.4+dfsg+~0.1.1-2_all.deb">node-imurmurhash</a></td>
               <td>0.1.4+dfsg+~0.1.1-2</td>
               <td>incremental implementation of MurmurHash3 hashing algorithm</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-indent-string/node-indent-string_4.0.0-2_all.deb">node-indent-string</a></td>
               <td>4.0.0-2</td>
               <td>Indent each line in a string</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-inflight/node-inflight_1.0.6-2_all.deb">node-inflight</a></td>
               <td>1.0.6-2</td>
               <td>add callbacks to requests in flight to avoid async duplication</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-inherits/node-inherits_2.0.4-6_all.deb">node-inherits</a></td>
               <td>2.0.4-6</td>
               <td>Node.js module that exposes inherits function</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-ini/node-ini_3.0.1-2_all.deb">node-ini</a></td>
               <td>3.0.1-2</td>
               <td>ini format parser and serializer for Node.js</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-interpret/node-interpret_2.2.0-3_all.deb">node-interpret</a></td>
               <td>2.2.0-3</td>
               <td>dictionary of file extensions and associated module loaders</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-ip/node-ip_2.0.0+~1.1.0-1_all.deb">node-ip</a></td>
               <td>2.0.0+~1.1.0-1</td>
               <td>IP address utilities for node.js</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-ip-regex/node-ip-regex_4.3.0+~4.1.1-1_all.deb">node-ip-regex</a></td>
               <td>4.3.0+~4.1.1-1</td>
               <td>Regular expression for matching IP addresses</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-is-arrayish/node-is-arrayish_0.3.2-3_all.deb">node-is-arrayish</a></td>
               <td>0.3.2-3</td>
               <td>Determines if an object can be used as an array</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-is-binary-path/node-is-binary-path_2.1.0-5_all.deb">node-is-binary-path</a></td>
               <td>2.1.0-5</td>
               <td>check if a filepath is a binary file</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-is-buffer/node-is-buffer_2.0.5-2_all.deb">node-is-buffer</a></td>
               <td>2.0.5-2</td>
               <td>Determine if an object is a Buffer</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-is-descriptor/node-is-descriptor_3.0.0-2_all.deb">node-is-descriptor</a></td>
               <td>3.0.0-2</td>
               <td>Returns true if value has characteristics of a valid JS descriptor</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-is-extendable/node-is-extendable_1.0.1-3_all.deb">node-is-extendable</a></td>
               <td>1.0.1-3</td>
               <td>determine if a value can be extended</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-is-extglob/node-is-extglob_2.1.1-5_all.deb">node-is-extglob</a></td>
               <td>2.1.1-5</td>
               <td>Node module to return true if a string is an extglob</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-is-glob/node-is-glob_4.0.3-2_all.deb">node-is-glob</a></td>
               <td>4.0.3-2</td>
               <td>Node module to return true if a string is a glob or extglob</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-is-number/node-is-number_7.0.0-4_all.deb">node-is-number</a></td>
               <td>7.0.0-4</td>
               <td>returns true if the value is a number</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-is-path-cwd/node-is-path-cwd_2.2.0-2_all.deb">node-is-path-cwd</a></td>
               <td>2.2.0-2</td>
               <td>Check if a path is CWD</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-is-path-inside/node-is-path-inside_3.0.3-2_all.deb">node-is-path-inside</a></td>
               <td>3.0.3-2</td>
               <td>Check if a path is inside another path</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-is-plain-obj/node-is-plain-obj_3.0.0-2_all.deb">node-is-plain-obj</a></td>
               <td>3.0.0-2</td>
               <td>Check if a value is a plain object</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-is-plain-object/node-is-plain-object_5.0.0-7_all.deb">node-is-plain-object</a></td>
               <td>5.0.0-7</td>
               <td>Returns true if object was created by `Object` constructor</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
 
         </tbody>
@@ -648,10 +648,10 @@
     <section id="sponsor">
       <div class="sponsor">
         <div class="linija-dole mb-1"></div>
-        <p style="letter-spacing:1px;" class="pb-1 pt-1 text-white text-center">{{ site.data.strings.footnote-dev | replace: '[OpenBosniana OS]', '
-													<a href="##">OpenBosniana OS</a>' | replace: '[bosniana.org]', '
-													<a href="##">bosniana.org</a>' | replace: '[Denis Maslo]', '
-													<a href="##">Denis Maslo</a>' }}
+        <p style="letter-spacing:1px;" class="pb-1 pt-1 text-white text-center">
+													<a href="##">OpenBosniana OS</a> and
+													<a href="##">bosniana.org</a> developed by:
+													<a href="##">Denis Maslo</a>
         </p>
 
         <p style="letter-spacing:1px;" class="pb-1 pt-1 text-white text-center"><i class="ri-mail-send-line"></i> Private email:
