--- a/packages/37.html
+++ b/packages/37.html
@@ -223,350 +223,350 @@
               <td><a href="pool/main/n/node-neo-async/node-neo-async_2.6.2+~cs3.0.0-2_all.deb">node-neo-async</a></td>
               <td>2.6.2+~cs3.0.0-2</td>
               <td>faster replacement for Async</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-nopt/node-nopt_5.0.0-4_all.deb">node-nopt</a></td>
               <td>5.0.0-4</td>
               <td>Command-line option parser for Node.js</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-normalize-package-data/node-normalize-package-data_4.0.1+~2.4.1-1_all.deb">node-normalize-package-data</a></td>
               <td>4.0.1+~2.4.1-1</td>
               <td>Normalizes package metadata - Node.js module</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-normalize-path/node-normalize-path_3.0.0+~3.0.0-1_all.deb">node-normalize-path</a></td>
               <td>3.0.0+~3.0.0-1</td>
               <td>Normalize file path slashes to be unix-like forward slashes</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-npm-bundled/node-npm-bundled_2.0.1-2_all.deb">node-npm-bundled</a></td>
               <td>2.0.1-2</td>
               <td>Parses info on bundled dependencies</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-npm-package-arg/node-npm-package-arg_10.0.0+~3.0.0-2_all.deb">node-npm-package-arg</a></td>
               <td>10.0.0+~3.0.0-2</td>
               <td>Parse the things that can be arguments to npm install</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-npm-run-path/node-npm-run-path_5.1.0+~4.0.0-8_all.deb">node-npm-run-path</a></td>
               <td>5.1.0+~4.0.0-8</td>
               <td>Get your PATH prepended with locally installed binaries</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-npmlog/node-npmlog_7.0.1+~4.1.4-1_all.deb">node-npmlog</a></td>
               <td>7.0.1+~4.1.4-1</td>
               <td>Logger with custom levels and colored output for Node.js</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-object-assign/node-object-assign_4.1.1-7_all.deb">node-object-assign</a></td>
               <td>4.1.1-7</td>
               <td>ES2015 Object.assign() ponyfill</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-object-inspect/node-object-inspect_1.12.2+~cs1.8.1-1_all.deb">node-object-inspect</a></td>
               <td>1.12.2+~cs1.8.1-1</td>
               <td>string representations of objects in node and the browser</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-object-visit/node-object-visit_1.0.1-5_all.deb">node-object-visit</a></td>
               <td>1.0.1-5</td>
               <td>Call a specified method on each value in the given object</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-once/node-once_1.4.0-7_all.deb">node-once</a></td>
               <td>1.4.0-7</td>
               <td>Run a function only once with this module for Node.js</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-opener/node-opener_1.5.2+~1.4.0-1_all.deb">node-opener</a></td>
               <td>1.5.2+~1.4.0-1</td>
               <td>Opens stuff, like webpages and files and executables</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-optimist/node-optimist_0.6.1+~0.0.30-2_all.deb">node-optimist</a></td>
               <td>0.6.1+~0.0.30-2</td>
               <td>light-weight option parsing library for NodeJS</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-optionator/node-optionator_0.9.1+dfsg+~cs1.2.3-1_all.deb">node-optionator</a></td>
               <td>0.9.1+dfsg+~cs1.2.3-1</td>
               <td>option parsing and help generation</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-osenv/node-osenv_0.1.5+~0.1.1-1_all.deb">node-osenv</a></td>
               <td>0.1.5+~0.1.1-1</td>
               <td>Environment settings lookup module for Node.js</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-p-cancelable/node-p-cancelable_2.1.1-1_all.deb">node-p-cancelable</a></td>
               <td>2.1.1-1</td>
               <td>Create a promise that can be canceled</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-p-limit/node-p-limit_4.0.0+~cs4.0.0-5_all.deb">node-p-limit</a></td>
               <td>4.0.0+~cs4.0.0-5</td>
               <td>run multiple promise-returning & async functions</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-p-locate/node-p-locate_6.0.0-12_all.deb">node-p-locate</a></td>
               <td>6.0.0-12</td>
               <td>async version of Array</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-p-map/node-p-map_4.0.0+~3.1.0+~3.0.1-1_all.deb">node-p-map</a></td>
               <td>4.0.0+~3.1.0+~3.0.1-1</td>
               <td>Map over promises concurrently</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-parse-json/node-parse-json_5.2.0+~cs5.1.7-1_all.deb">node-parse-json</a></td>
               <td>5.2.0+~cs5.1.7-1</td>
               <td>parse JSON with more helpful errors</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-pascalcase/node-pascalcase_1.0.0-1_all.deb">node-pascalcase</a></td>
               <td>1.0.0-1</td>
               <td>Convert a string to pascal-case</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-path-dirname/node-path-dirname_1.0.2-2_all.deb">node-path-dirname</a></td>
               <td>1.0.2-2</td>
               <td>Node.js library for function path.dirname ponyfill</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-path-exists/node-path-exists_5.0.0-8_all.deb">node-path-exists</a></td>
               <td>5.0.0-8</td>
               <td>Check if a path exists</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-path-is-absolute/node-path-is-absolute_2.0.0-2_all.deb">node-path-is-absolute</a></td>
               <td>2.0.0-2</td>
               <td>Node.js 0.12 path.isAbsolute() ponyfill</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-path-is-inside/node-path-is-inside_1.0.2+~1.0.0-1_all.deb">node-path-is-inside</a></td>
               <td>1.0.2+~1.0.0-1</td>
               <td>Tests whether one path is inside another path</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-path-type/node-path-type_4.0.0-3_all.deb">node-path-type</a></td>
               <td>4.0.0-3</td>
               <td>check if a path is a file, directory, or symlink</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-picocolors/node-picocolors_1.0.0-4_all.deb">node-picocolors</a></td>
               <td>1.0.0-4</td>
               <td>library for terminal output formatting with colors (Node.js module)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-pify/node-pify_5.0.0+~cs5.0.1-1_all.deb">node-pify</a></td>
               <td>5.0.0+~cs5.0.1-1</td>
               <td>promisify a callback-style function</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-pkg-dir/node-pkg-dir_5.0.0-2_all.deb">node-pkg-dir</a></td>
               <td>5.0.0-2</td>
               <td>find the root directory of a npm package</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-postcss/node-postcss_8.4.20+~cs8.0.23-1_all.deb">node-postcss</a></td>
               <td>8.4.20+~cs8.0.23-1</td>
               <td>Tool for transforming styles with JS plugins</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-postcss-modules-extract-imports/node-postcss-modules-extract-imports_3.0.0-2_all.deb">node-postcss-modules-extract-imports</a></td>
               <td>3.0.0-2</td>
               <td>CSS Modules transform to extract local aliases for inline imports</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-postcss-modules-values/node-postcss-modules-values_4.0.0+~4.0.0-1_all.deb">node-postcss-modules-values</a></td>
               <td>4.0.0+~4.0.0-1</td>
               <td>pass arbitrary values between your module files</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-postcss-value-parser/node-postcss-value-parser_4.2.0-1_all.deb">node-postcss-value-parser</a></td>
               <td>4.2.0-1</td>
               <td>Transforms css values and at-rule params into the tree</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-prelude-ls/node-prelude-ls_1.2.1+dfsg-3_all.deb">node-prelude-ls</a></td>
               <td>1.2.1+dfsg-3</td>
               <td>functionally oriented utility library for Livescript</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-process-nextick-args/node-process-nextick-args_2.0.1-3_all.deb">node-process-nextick-args</a></td>
               <td>2.0.1-3</td>
               <td>process.nextTick but always with args</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-progress/node-progress_2.0.3-2_all.deb">node-progress</a></td>
               <td>2.0.3-2</td>
               <td>Flexible ascii progress bar</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-promise-inflight/node-promise-inflight_1.0.1+~1.0.0-1_all.deb">node-promise-inflight</a></td>
               <td>1.0.1+~1.0.0-1</td>
               <td>one promise for multiple requests in flight to avoid async duplication</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-promise-retry/node-promise-retry_2.0.1-4_all.deb">node-promise-retry</a></td>
               <td>2.0.1-4</td>
               <td>Retries a function that returns a promise</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-promzard/node-promzard_0.3.0-2_all.deb">node-promzard</a></td>
               <td>0.3.0-2</td>
               <td>Promzard provides a prompting json wizard</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-prr/node-prr_1.0.1-3_all.deb">node-prr</a></td>
               <td>1.0.1-3</td>
               <td>Object.defineProperty() with common defaults - Node.js module</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-pump/node-pump_3.0.0-5_all.deb">node-pump</a></td>
               <td>3.0.0-5</td>
               <td>small node module that pipes streams together</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-punycode/node-punycode_2.1.1-6_all.deb">node-punycode</a></td>
               <td>2.1.1-6</td>
               <td>Nodejs robust Punycode converter fully RFC compliant</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-quick-lru/node-quick-lru_6.1.1-4_all.deb">node-quick-lru</a></td>
               <td>6.1.1-4</td>
               <td>Simple "Least Recently Used" (LRU) cache</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-randombytes/node-randombytes_2.1.0+~2.0.0-2_all.deb">node-randombytes</a></td>
               <td>2.1.0+~2.0.0-2</td>
               <td>random bytes from browserify stand alone</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-read/node-read_1.0.7-5_all.deb">node-read</a></td>
               <td>1.0.7-5</td>
               <td>Read user input from stdin module for Node.js</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-read-package-json/node-read-package-json_5.0.2+~2.0.0-1_all.deb">node-read-package-json</a></td>
               <td>5.0.2+~2.0.0-1</td>
               <td>Read package.json for npm module for Node.js</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-read-pkg/node-read-pkg_5.2.0-2_all.deb">node-read-pkg</a></td>
               <td>5.2.0-2</td>
               <td>Read a package.json file</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-readable-stream/node-readable-stream_3.6.0+~cs3.0.0-4_all.deb">node-readable-stream</a></td>
               <td>3.6.0+~cs3.0.0-4</td>
               <td>stream compatibility library for Node.js and browser</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-readdirp/node-readdirp_3.6.0-1_all.deb">node-readdirp</a></td>
               <td>3.6.0-1</td>
               <td>Recursive version of Node.js's fs.readdir</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
 
         </tbody>
@@ -648,10 +648,10 @@
     <section id="sponsor">
       <div class="sponsor">
         <div class="linija-dole mb-1"></div>
-        <p style="letter-spacing:1px;" class="pb-1 pt-1 text-white text-center">{{ site.data.strings.footnote-dev | replace: '[OpenBosniana OS]', '
-													<a href="##">OpenBosniana OS</a>' | replace: '[bosniana.org]', '
-													<a href="##">bosniana.org</a>' | replace: '[Denis Maslo]', '
-													<a href="##">Denis Maslo</a>' }}
+        <p style="letter-spacing:1px;" class="pb-1 pt-1 text-white text-center">
+													<a href="##">OpenBosniana OS</a> and
+													<a href="##">bosniana.org</a> developed by:
+													<a href="##">Denis Maslo</a>
         </p>
 
         <p style="letter-spacing:1px;" class="pb-1 pt-1 text-white text-center"><i class="ri-mail-send-line"></i> Private email:
