--- a/packages/47.html
+++ b/packages/47.html
@@ -223,350 +223,350 @@
               <td><a href="pool/main/s/sysvinit/sysvinit-utils_3.06-4_amd64.deb">sysvinit-utils</a></td>
               <td>3.06-4</td>
               <td>System-V-like utilities</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/t/t1utils/t1utils_1.41-4_amd64.deb">t1utils</a></td>
               <td>1.41-4</td>
               <td>Collection of simple Type 1 font manipulation programs</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/t/tar/tar_1.34+dfsg-1.2+deb12u1_amd64.deb">tar</a></td>
               <td>1.34+dfsg-1.2+deb12u1</td>
               <td>GNU version of the tar archiving utility</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/t/tasksel/task-bosnian-kde-desktop_3.73+openbosniana5_all.deb">task-bosnian-kde-desktop</a></td>
               <td>3.73+openbosniana5</td>
               <td>Bosnian KDE Plasma desktop</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/t/tasksel/task-desktop_3.73+openbosniana5_all.deb">task-desktop</a></td>
               <td>1:3.73+openbosniana5</td>
               <td>Debian desktop environment</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/t/tasksel/task-kde-desktop_3.73+openbosniana5_all.deb">task-kde-desktop</a></td>
               <td>1:3.73+openbosniana5</td>
               <td>KDE Plasma</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/t/tasksel/task-lxqt-desktop_3.73_all.deb">task-lxqt-desktop</a></td>
               <td>3.73</td>
               <td>LXQt</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/t/tasksel/tasksel_3.73+openbosniana5_all.deb">tasksel</a></td>
               <td>1:3.73+openbosniana5</td>
               <td>tool for selecting tasks for installation on Debian systems</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/t/tasksel/tasksel-data_3.73+openbosniana5_all.deb">tasksel-data</a></td>
               <td>1:3.73+openbosniana5</td>
               <td>official tasks used for installation of Debian systems</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-terser/terser_5.16.5-2_all.deb">terser</a></td>
               <td>5.16.5-2</td>
               <td>parser/mangler/compressor for ES6+ - CLI tool</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/t/thin-provisioning-tools/thin-provisioning-tools_0.9.0-2_amd64.deb">thin-provisioning-tools</a></td>
               <td>0.9.0-2</td>
               <td>Tools for handling thinly provisioned device-mapper meta-data</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/t/thunderbird/thunderbird_115.12.0-1~deb12u1_amd64.deb">thunderbird</a></td>
               <td>1:115.12.0-1~deb12u1</td>
               <td>mail/news client with RSS, chat and integrated spam filter support</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/t/timgm6mb-soundfont/timgm6mb-soundfont_1.3-5_all.deb">timgm6mb-soundfont</a></td>
               <td>1.3-5</td>
               <td>TimGM6mb SoundFont from MuseScore 1.3</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/t/toilet/toilet_0.3-1.4_amd64.deb">toilet</a></td>
               <td>0.3-1.4</td>
               <td>display large colourful characters in text mode</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/t/toilet/toilet-fonts_0.3-1.4_all.deb">toilet-fonts</a></td>
               <td>0.3-1.4</td>
               <td>collection of TOIlet fonts</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/t/tor/tor_0.4.7.16-1_amd64.deb">tor</a></td>
               <td>0.4.7.16-1</td>
               <td>anonymizing overlay network for TCP</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/t/tor/tor-geoipdb_0.4.7.16-1_all.deb">tor-geoipdb</a></td>
               <td>0.4.7.16-1</td>
               <td>GeoIP database for Tor</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/t/torsocks/torsocks_2.4.0-1_amd64.deb">torsocks</a></td>
               <td>2.4.0-1</td>
               <td>use SOCKS-friendly applications with Tor</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/t/tpm-udev/tpm-udev_0.6_all.deb">tpm-udev</a></td>
               <td>0.6</td>
               <td>udev rules for TPM modules</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/t/traceroute/traceroute_2.1.2-1_amd64.deb">traceroute</a></td>
               <td>1:2.1.2-1</td>
               <td>Traces the route taken by packets over an IPv4/IPv6 network</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/t/tree/tree_2.1.0-1_amd64.deb">tree</a></td>
               <td>2.1.0-1</td>
               <td>displays an indented directory tree, in color</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/t/tzdata/tzdata_2024a-0+deb12u1_all.deb">tzdata</a></td>
               <td>2024a-0+deb12u1</td>
               <td>time zone and daylight-saving time data</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/u/ucf/ucf_3.0043+nmu1_all.deb">ucf</a></td>
               <td>3.0043+nmu1</td>
               <td>Update Configuration File(s): preserve user changes to config files</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/s/systemd/udev_252.30-1~deb12u2_amd64.deb">udev</a></td>
               <td>252.30-1~deb12u2</td>
               <td>/dev/ and hotplug management daemon</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/u/udftools/udftools_2.3-1_amd64.deb">udftools</a></td>
               <td>2.3-1</td>
               <td>tools for UDF filesystems and DVD/CD-R(W) drives</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/u/udisks2/udisks2_2.9.4-4_amd64.deb">udisks2</a></td>
               <td>2.9.4-4</td>
               <td>D-Bus service to access and manipulate storage devices</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/u/ufw/ufw_0.36.2-1_all.deb">ufw</a></td>
               <td>0.36.2-1</td>
               <td>program for managing a Netfilter firewall</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/s/shadow/uidmap_4.13+dfsg1-1+b1_amd64.deb">uidmap</a></td>
               <td>1:4.13+dfsg1-1+b1</td>
               <td>programs to help use subuids</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/u/unar/unar_1.10.7+ds1+really1.10.1-2+b2_amd64.deb">unar</a></td>
               <td>1.10.7+ds1+really1.10.1-2+b2</td>
               <td>Unarchiver for a variety of file formats</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libr/libreoffice/uno-libs-private_7.4.7-1+deb12u5_amd64.deb">uno-libs-private</a></td>
               <td>4:7.4.7-1+deb12u5</td>
               <td>LibreOffice UNO runtime environment -- private libraries used by public ones</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/u/unzip/unzip_6.0-28_amd64.deb">unzip</a></td>
               <td>6.0-28</td>
               <td>De-archiver for .zip files</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/u/update-inetd/update-inetd_4.53_all.deb">update-inetd</a></td>
               <td>4.53</td>
               <td>inetd configuration file updater</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/u/upower/upower_0.99.20-2_amd64.deb">upower</a></td>
               <td>0.99.20-2</td>
               <td>abstraction for power management</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libr/libreoffice/ure_7.4.7-1+deb12u5_amd64.deb">ure</a></td>
               <td>4:7.4.7-1+deb12u5</td>
               <td>LibreOffice UNO runtime environment</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/u/usb-modeswitch/usb-modeswitch_2.6.1-3+b1_amd64.deb">usb-modeswitch</a></td>
               <td>2.6.1-3+b1</td>
               <td>mode switching tool for controlling "flip flop" USB devices</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/u/usb-modeswitch-data/usb-modeswitch-data_20191128-5_all.deb">usb-modeswitch-data</a></td>
               <td>20191128-5</td>
               <td>mode switching data for usb-modeswitch</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/u/usb.ids/usb.ids_2024.07.04-0+deb12u1_all.deb">usb.ids</a></td>
               <td>2024.07.04-0+deb12u1</td>
               <td>USB ID Repository</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/u/usbmuxd/usbmuxd_1.1.1-2_amd64.deb">usbmuxd</a></td>
               <td>1.1.1-2</td>
               <td>USB multiplexor daemon for iPhone and iPod Touch devices</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/u/usbutils/usbutils_014-1+deb12u1_amd64.deb">usbutils</a></td>
               <td>1:014-1+deb12u1</td>
               <td>Linux USB utilities</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/u/user-setup/user-setup_1.95_all.deb">user-setup</a></td>
               <td>1.95</td>
               <td>Set up initial user and password</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/u/usrmerge/usr-is-merged_37~deb12u1_all.deb">usr-is-merged</a></td>
               <td>37~deb12u1</td>
               <td>Transitional package to assert a merged-/usr system</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/u/util-linux/util-linux_2.38.1-5+deb12u1_amd64.deb">util-linux</a></td>
               <td>2.38.1-5+deb12u1</td>
               <td>miscellaneous system utilities</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/u/util-linux/util-linux-extra_2.38.1-5+deb12u1_amd64.deb">util-linux-extra</a></td>
               <td>2.38.1-5+deb12u1</td>
               <td>interactive login tools</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/u/util-linux/uuid-runtime_2.38.1-5+deb12u1_amd64.deb">uuid-runtime</a></td>
               <td>2.38.1-5+deb12u1</td>
               <td>runtime components for the Universally Unique ID library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libv/libva/va-driver-all_2.17.0-1_amd64.deb">va-driver-all</a></td>
               <td>2.17.0-1</td>
               <td>Video Acceleration (VA) API -- driver metapackage</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libv/libvdpau/vdpau-driver-all_1.5-2_amd64.deb">vdpau-driver-all</a></td>
               <td>1.5-2</td>
               <td>Video Decode and Presentation API for Unix (driver metapackage)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/v/vim/vim-common_9.0.1378-2_all.deb">vim-common</a></td>
               <td>2:9.0.1378-2</td>
               <td>Vi IMproved - Common files</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/v/vim/vim-tiny_9.0.1378-2_amd64.deb">vim-tiny</a></td>
               <td>2:9.0.1378-2</td>
               <td>Vi IMproved - enhanced vi editor - compact version</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/v/vlc/vlc_3.0.21-0+deb12u1_amd64.deb">vlc</a></td>
               <td>3.0.21-0+deb12u1</td>
               <td>multimedia player and streamer</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/v/vlc/vlc-bin_3.0.21-0+deb12u1_amd64.deb">vlc-bin</a></td>
               <td>3.0.21-0+deb12u1</td>
               <td>binaries from VLC</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
 
         </tbody>
@@ -648,10 +648,10 @@
     <section id="sponsor">
       <div class="sponsor">
         <div class="linija-dole mb-1"></div>
-        <p style="letter-spacing:1px;" class="pb-1 pt-1 text-white text-center">{{ site.data.strings.footnote-dev | replace: '[OpenBosniana OS]', '
-													<a href="##">OpenBosniana OS</a>' | replace: '[bosniana.org]', '
-													<a href="##">bosniana.org</a>' | replace: '[Denis Maslo]', '
-													<a href="##">Denis Maslo</a>' }}
+        <p style="letter-spacing:1px;" class="pb-1 pt-1 text-white text-center">
+													<a href="##">OpenBosniana OS</a> and
+													<a href="##">bosniana.org</a> developed by:
+													<a href="##">Denis Maslo</a>
         </p>
 
         <p style="letter-spacing:1px;" class="pb-1 pt-1 text-white text-center"><i class="ri-mail-send-line"></i> Private email:
