--- a/packages/5.html
+++ b/packages/5.html
@@ -223,350 +223,350 @@
               <td><a href="pool/main/f/fonts-dejavu/fonts-dejavu-core_2.37-6_all.deb">fonts-dejavu-core</a></td>
               <td>2.37-6</td>
               <td>Vera font family derivate with additional characters</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/f/fonts-android/fonts-droid-fallback_6.0.1r16-1.1_all.deb">fonts-droid-fallback</a></td>
               <td>1:6.0.1r16-1.1</td>
               <td>handheld device font with extensive style and language support (fallback)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/f/fonts-freefont/fonts-freefont-ttf_20120503-10_all.deb">fonts-freefont-ttf</a></td>
               <td>20120503-10</td>
               <td>Freefont Serif, Sans and Mono Truetype fonts</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/f/fonts-hack/fonts-hack_3.003-3_all.deb">fonts-hack</a></td>
               <td>3.003-3</td>
               <td>Typeface designed for source code</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/f/fonts-liberation/fonts-liberation_1.07.4-11_all.deb">fonts-liberation</a></td>
               <td>1:1.07.4-11</td>
               <td>Fonts with the same metrics as Times, Arial and Courier</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/f/fonts-noto/fonts-noto_20201225-1_all.deb">fonts-noto</a></td>
               <td>20201225-1</td>
               <td>metapackage to pull in all Noto fonts</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/f/fonts-noto-cjk/fonts-noto-cjk_20220127+repack1-1_all.deb">fonts-noto-cjk</a></td>
               <td>1:20220127+repack1-1</td>
               <td>"No Tofu" font families with large Unicode coverage (CJK regular and bold)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/f/fonts-noto-color-emoji/fonts-noto-color-emoji_2.042-0+deb12u1_all.deb">fonts-noto-color-emoji</a></td>
               <td>2.042-0+deb12u1</td>
               <td>color emoji font from Google</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/f/fonts-noto/fonts-noto-core_20201225-1_all.deb">fonts-noto-core</a></td>
               <td>20201225-1</td>
               <td>"No Tofu" font families with large Unicode coverage (core)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/f/fonts-noto/fonts-noto-extra_20201225-1_all.deb">fonts-noto-extra</a></td>
               <td>20201225-1</td>
               <td>"No Tofu" font families with large Unicode coverage (extra)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/f/fonts-noto/fonts-noto-hinted_20201225-1_all.deb">fonts-noto-hinted</a></td>
               <td>20201225-1</td>
               <td>obsolete metapackage to pull in a subset of Noto fonts</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/f/fonts-noto/fonts-noto-mono_20201225-1_all.deb">fonts-noto-mono</a></td>
               <td>20201225-1</td>
               <td>"No Tofu" monospaced font family with large Unicode coverage</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/f/fonts-noto/fonts-noto-ui-core_20201225-1_all.deb">fonts-noto-ui-core</a></td>
               <td>20201225-1</td>
               <td>"No Tofu" font families with large Unicode coverage (UI core)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/f/fonts-noto/fonts-noto-ui-extra_20201225-1_all.deb">fonts-noto-ui-extra</a></td>
               <td>20201225-1</td>
               <td>"No Tofu" font families with large Unicode coverage (UI extra)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/f/fonts-noto/fonts-noto-unhinted_20201225-1_all.deb">fonts-noto-unhinted</a></td>
               <td>20201225-1</td>
               <td>"No Tofu" font families with large Unicode coverage (unhinted)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/f/fonts-quicksand/fonts-quicksand_0.2016-2.1_all.deb">fonts-quicksand</a></td>
               <td>0.2016-2.1</td>
               <td>sans-serif font with round attributes</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/t/ttf-ancient-fonts/fonts-symbola_2.60-1.1_all.deb">fonts-symbola</a></td>
               <td>2.60-1.1</td>
               <td>symbolic font providing emoji characters from Unicode 9.0</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/f/fonts-urw-base35/fonts-urw-base35_20200910-7_all.deb">fonts-urw-base35</a></td>
               <td>20200910-7</td>
               <td>font set metric-compatible with the 35 PostScript Level 2 Base Fonts</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/f/frameworkintegration/frameworkintegration_5.103.0-1_amd64.deb">frameworkintegration</a></td>
               <td>5.103.0-1</td>
               <td>KF5 cross-framework integration plugins</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/f/fuse-overlayfs/fuse-overlayfs_1.10-1_amd64.deb">fuse-overlayfs</a></td>
               <td>1.10-1</td>
               <td>implementation of overlay+shiftfs in FUSE for rootless containers</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/f/fuse3/fuse3_3.14.0-4_amd64.deb">fuse3</a></td>
               <td>3.14.0-4</td>
               <td>Filesystem in Userspace (3.x version)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/f/fwupd/fwupd_1.8.12-2_amd64.deb">fwupd</a></td>
               <td>1.8.12-2</td>
               <td>Firmware update daemon</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/f/fwupd-amd64-signed/fwupd-amd64-signed_1.4+1_amd64.deb">fwupd-amd64-signed</a></td>
               <td>1:1.4+1</td>
               <td>Tools to manage UEFI firmware updates (signed)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/f/fxload/fxload_0.0.20081013-2_amd64.deb">fxload</a></td>
               <td>0.0.20081013-2</td>
               <td>Firmware download to EZ-USB devices</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gcc-defaults/g++_12.2.0-3_amd64.deb">g++</a></td>
               <td>4:12.2.0-3</td>
               <td>GNU C++ compiler</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gcc-12/g++-12_12.2.0-14_amd64.deb">g++-12</a></td>
               <td>12.2.0-14</td>
               <td>GNU C++ compiler</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gcc-defaults/gcc_12.2.0-3_amd64.deb">gcc</a></td>
               <td>4:12.2.0-3</td>
               <td>GNU C compiler</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gcc-12/gcc-12_12.2.0-14_amd64.deb">gcc-12</a></td>
               <td>12.2.0-14</td>
               <td>GNU C compiler</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gcc-12/gcc-12-base_12.2.0-14_amd64.deb">gcc-12-base</a></td>
               <td>12.2.0-14</td>
               <td>GCC, the GNU Compiler Collection (base package)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/g/gcc-12/gcc-12-locales_12.2.0-14_all.deb">gcc-12-locales</a></td>
               <td>12.2.0-14</td>
               <td>GCC, the GNU compiler collection (native language support files)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gcr/gcr_3.41.1-1+b1_amd64.deb">gcr</a></td>
               <td>3.41.1-1+b1</td>
               <td>GNOME crypto services (daemon and tools)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gdb/gdb-minimal_13.1-3_amd64.deb">gdb-minimal</a></td>
               <td>13.1-3</td>
               <td>GNU Debugger (minimal version)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gdisk/gdisk_1.0.9-2.1_amd64.deb">gdisk</a></td>
               <td>1.0.9-2.1</td>
               <td>GPT fdisk text-mode partitioning tool</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/geoclue-2.0/geoclue-2.0_2.6.0-2_amd64.deb">geoclue-2.0</a></td>
               <td>2.6.0-2</td>
               <td>geoinformation service</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gettext/gettext_0.21-12_amd64.deb">gettext</a></td>
               <td>0.21-12</td>
               <td>GNU Internationalization utilities</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gettext/gettext-base_0.21-12_amd64.deb">gettext-base</a></td>
               <td>0.21-12</td>
               <td>GNU Internationalization utilities for the base system</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/ghostscript/ghostscript_10.0.0~dfsg-11+deb12u4_amd64.deb">ghostscript</a></td>
               <td>10.0.0~dfsg-11+deb12u4</td>
               <td>interpreter for the PostScript language and for PDF</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/liba/libadwaita-1/gir1.2-adw-1_1.2.2-1_amd64.deb">gir1.2-adw-1</a></td>
               <td>1.2.2-1</td>
               <td>GObject introspection files for libadwaita</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/a/at-spi2-core/gir1.2-atk-1.0_2.46.0-5_amd64.deb">gir1.2-atk-1.0</a></td>
               <td>2.46.0-5</td>
               <td>ATK accessibility toolkit (GObject introspection)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gobject-introspection/gir1.2-freedesktop_1.74.0-3_amd64.deb">gir1.2-freedesktop</a></td>
               <td>1.74.0-3</td>
               <td>Introspection data for some FreeDesktop components</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gdk-pixbuf/gir1.2-gdkpixbuf-2.0_2.42.10+dfsg-1+deb12u1_amd64.deb">gir1.2-gdkpixbuf-2.0</a></td>
               <td>2.42.10+dfsg-1+deb12u1</td>
               <td>GDK Pixbuf library - GObject-Introspection</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gobject-introspection/gir1.2-glib-2.0_1.74.0-3_amd64.deb">gir1.2-glib-2.0</a></td>
               <td>1.74.0-3</td>
               <td>Introspection data for GLib, GObject, Gio and GModule</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/graphene/gir1.2-graphene-1.0_1.10.8-1_amd64.deb">gir1.2-graphene-1.0</a></td>
               <td>1.10.8-1</td>
               <td>library of graphic data types (introspection files)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gtk+3.0/gir1.2-gtk-3.0_3.24.38-2~deb12u2_amd64.deb">gir1.2-gtk-3.0</a></td>
               <td>3.24.38-2~deb12u2</td>
               <td>GTK graphical user interface library -- gir bindings</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gtk4/gir1.2-gtk-4.0_4.8.3+ds-2+deb12u1_amd64.deb">gir1.2-gtk-4.0</a></td>
               <td>4.8.3+ds-2+deb12u1</td>
               <td>GTK graphical user interface library -- gir bindings</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libh/libhandy-1/gir1.2-handy-1_1.8.1-1_amd64.deb">gir1.2-handy-1</a></td>
               <td>1.8.1-1</td>
               <td>GObject introspection files for libhandy</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/h/harfbuzz/gir1.2-harfbuzz-0.0_6.0.0+dfsg-3_amd64.deb">gir1.2-harfbuzz-0.0</a></td>
               <td>6.0.0+dfsg-3</td>
               <td>OpenType text shaping engine (GObject introspection data)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/w/webkit2gtk/gir1.2-javascriptcoregtk-4.0_2.44.3-1~deb12u1_amd64.deb">gir1.2-javascriptcoregtk-4.0</a></td>
               <td>2.44.3-1~deb12u1</td>
               <td>JavaScript engine library from WebKitGTK - GObject introspection data</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libn/libnotify/gir1.2-notify-0.7_0.8.1-1_amd64.deb">gir1.2-notify-0.7</a></td>
               <td>0.8.1-1</td>
               <td>sends desktop notifications to a notification daemon (Introspection files)</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/packagekit/gir1.2-packagekitglib-1.0_1.2.6-5_amd64.deb">gir1.2-packagekitglib-1.0</a></td>
               <td>1.2.6-5</td>
               <td>GObject introspection data for the PackageKit GLib library</td>
-              <td>2024-12-08 13:39:49</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
 
         </tbody>
@@ -648,10 +648,10 @@
     <section id="sponsor">
       <div class="sponsor">
         <div class="linija-dole mb-1"></div>
-        <p style="letter-spacing:1px;" class="pb-1 pt-1 text-white text-center">{{ site.data.strings.footnote-dev | replace: '[OpenBosniana OS]', '
-													<a href="##">OpenBosniana OS</a>' | replace: '[bosniana.org]', '
-													<a href="##">bosniana.org</a>' | replace: '[Denis Maslo]', '
-													<a href="##">Denis Maslo</a>' }}
+        <p style="letter-spacing:1px;" class="pb-1 pt-1 text-white text-center">
+													<a href="##">OpenBosniana OS</a> and
+													<a href="##">bosniana.org</a> developed by:
+													<a href="##">Denis Maslo</a>
         </p>
 
         <p style="letter-spacing:1px;" class="pb-1 pt-1 text-white text-center"><i class="ri-mail-send-line"></i> Private email:
