--- a/packages/index.html
+++ b/packages/index.html
@@ -223,350 +223,350 @@
               <td><a href="pool/main/a/aardvark-dns/aardvark-dns_1.4.0-3_amd64.deb">aardvark-dns</a></td>
               <td>1.4.0-3</td>
               <td>Container-focused DNS server</td>
-              <td>2024-12-08 13:37:05</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/a/accountsservice/accountsservice_22.08.8-6_amd64.deb">accountsservice</a></td>
               <td>22.08.8-6</td>
               <td>query and manipulate user account information</td>
-              <td>2024-12-08 13:37:05</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kmail-account-wizard/accountwizard_22.12.3-1_amd64.deb">accountwizard</a></td>
               <td>4:22.12.3-1</td>
               <td>wizard for KDE PIM applications account setup</td>
-              <td>2024-12-08 13:37:05</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/a/acl/acl_2.3.1-3_amd64.deb">acl</a></td>
               <td>2.3.1-3</td>
               <td>access control list - utilities</td>
-              <td>2024-12-08 13:37:05</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/a/adduser/adduser_3.134_all.deb">adduser</a></td>
               <td>3.134</td>
               <td>add and remove users and groups</td>
-              <td>2024-12-08 13:37:05</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/a/adwaita-icon-theme/adwaita-icon-theme_43-2_all.deb">adwaita-icon-theme</a></td>
               <td>43-2</td>
               <td>default icon theme of GNOME</td>
-              <td>2024-12-08 13:37:05</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/a/aha/aha_0.5.1-3_amd64.deb">aha</a></td>
               <td>0.5.1-3</td>
               <td>ANSI color to HTML converter</td>
-              <td>2024-12-08 13:37:05</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/a/alsa-topology-conf/alsa-topology-conf_1.2.5.1-2_all.deb">alsa-topology-conf</a></td>
               <td>1.2.5.1-2</td>
               <td>ALSA topology configuration files</td>
-              <td>2024-12-08 13:37:05</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/a/alsa-ucm-conf/alsa-ucm-conf_1.2.8-1_all.deb">alsa-ucm-conf</a></td>
               <td>1.2.8-1</td>
               <td>ALSA Use Case Manager configuration files</td>
-              <td>2024-12-08 13:37:05</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/a/alsa-utils/alsa-utils_1.2.8-1_amd64.deb">alsa-utils</a></td>
               <td>1.2.8-1</td>
               <td>Utilities for configuring and using ALSA</td>
-              <td>2024-12-08 13:37:05</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/a/anacron/anacron_2.3-36_amd64.deb">anacron</a></td>
               <td>2.3-36</td>
               <td>cron-like program that doesn't go by time</td>
-              <td>2024-12-08 13:37:05</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/a/anonsurf/anonsurf_5.0.0+parrot1_amd64.deb">anonsurf</a></td>
               <td>5.0.0+parrot1</td>
               <td>Anonymization toolkit for Parrot Security OS</td>
-              <td>2024-12-08 13:37:05</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/a/anonsurf/anonsurf-cli_5.0.0+parrot1_amd64.deb">anonsurf-cli</a></td>
               <td>5.0.0+parrot1</td>
               <td>Command Line Interfaced for AnonSurf</td>
-              <td>2024-12-08 13:37:05</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/a/anonsurf/anonsurf-gtk_5.0.0+parrot1_amd64.deb">anonsurf-gtk</a></td>
               <td>5.0.0+parrot1</td>
               <td>Graphic Interface for AnonSurf</td>
-              <td>2024-12-08 13:37:05</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/a/apparmor/apparmor_3.0.8-3_amd64.deb">apparmor</a></td>
               <td>3.0.8-3</td>
               <td>user-space parser utility for AppArmor</td>
-              <td>2024-12-08 13:37:05</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/a/apparmor/apparmor-notify_3.0.8-3_all.deb">apparmor-notify</a></td>
               <td>3.0.8-3</td>
               <td>AppArmor notification system</td>
-              <td>2024-12-08 13:37:05</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/a/apparmor/apparmor-profiles_3.0.8-3_all.deb">apparmor-profiles</a></td>
               <td>3.0.8-3</td>
               <td>experimental profiles for AppArmor security policies</td>
-              <td>2024-12-08 13:37:05</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/a/apparmor-profiles-extra/apparmor-profiles-extra_1.35_all.deb">apparmor-profiles-extra</a></td>
               <td>1.35</td>
               <td>Extra profiles for AppArmor Security policies</td>
-              <td>2024-12-08 13:37:05</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/a/apparmor/apparmor-utils_3.0.8-3_all.deb">apparmor-utils</a></td>
               <td>3.0.8-3</td>
               <td>utilities for controlling AppArmor</td>
-              <td>2024-12-08 13:37:05</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/a/appstream/appstream_0.16.1-2_amd64.deb">appstream</a></td>
               <td>0.16.1-2</td>
               <td>Software component metadata management</td>
-              <td>2024-12-08 13:37:05</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/a/apt/apt_2.6.1_amd64.deb">apt</a></td>
               <td>2.6.1</td>
               <td>commandline package manager</td>
-              <td>2024-12-08 13:37:05</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/a/appstream/apt-config-icons_0.16.1-2_all.deb">apt-config-icons</a></td>
               <td>0.16.1-2</td>
               <td>APT configuration snippet to enable icon downloads</td>
-              <td>2024-12-08 13:37:05</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/a/appstream/apt-config-icons-hidpi_0.16.1-2_all.deb">apt-config-icons-hidpi</a></td>
               <td>0.16.1-2</td>
               <td>APT configuration snippet to enable HiDPI icon downloads</td>
-              <td>2024-12-08 13:37:05</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/a/appstream/apt-config-icons-large_0.16.1-2_all.deb">apt-config-icons-large</a></td>
               <td>0.16.1-2</td>
               <td>APT configuration snippet to enable large icon downloads</td>
-              <td>2024-12-08 13:37:05</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/a/appstream/apt-config-icons-large-hidpi_0.16.1-2_all.deb">apt-config-icons-large-hidpi</a></td>
               <td>0.16.1-2</td>
               <td>APT configuration snippet to enable large HiDPI icon downloads</td>
-              <td>2024-12-08 13:37:05</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/a/apt-listchanges/apt-listchanges_3.24_all.deb">apt-listchanges</a></td>
               <td>3.24</td>
               <td>package change history notification tool</td>
-              <td>2024-12-08 13:37:05</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/a/apt/apt-utils_2.6.1_amd64.deb">apt-utils</a></td>
               <td>2.6.1</td>
               <td>package management related utility programs</td>
-              <td>2024-12-08 13:37:05</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/a/ark/ark_22.12.3-1_amd64.deb">ark</a></td>
               <td>4:22.12.3-1</td>
               <td>archive utility</td>
-              <td>2024-12-08 13:37:05</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/a/aspell/aspell_0.60.8-4+b1_amd64.deb">aspell</a></td>
               <td>0.60.8-4+b1</td>
               <td>GNU Aspell spell-checker</td>
-              <td>2024-12-08 13:37:05</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/a/aspell-en/aspell-en_2020.12.07-0-1_all.deb">aspell-en</a></td>
               <td>2020.12.07-0-1</td>
               <td>English dictionary for GNU Aspell</td>
-              <td>2024-12-08 13:37:05</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/a/at-spi2-core/at-spi2-common_2.46.0-5_all.deb">at-spi2-common</a></td>
               <td>2.46.0-5</td>
               <td>Assistive Technology Service Provider Interface (common files)</td>
-              <td>2024-12-08 13:37:05</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/a/at-spi2-core/at-spi2-core_2.46.0-5_amd64.deb">at-spi2-core</a></td>
               <td>2.46.0-5</td>
               <td>Assistive Technology Service Provider Interface (D-Bus core)</td>
-              <td>2024-12-08 13:37:05</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/a/avahi/avahi-daemon_0.8-10_amd64.deb">avahi-daemon</a></td>
               <td>0.8-10</td>
               <td>Avahi mDNS/DNS-SD daemon</td>
-              <td>2024-12-08 13:37:05</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/a/avahi/avahi-utils_0.8-10_amd64.deb">avahi-utils</a></td>
               <td>0.8-10</td>
               <td>Avahi browsing, publishing and discovery utilities</td>
-              <td>2024-12-08 13:37:05</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/b/baloo-kf5/baloo-kf5_5.103.0-2_amd64.deb">baloo-kf5</a></td>
               <td>5.103.0-2</td>
               <td>framework for searching and managing metadata</td>
-              <td>2024-12-08 13:37:05</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/b/base-files/base-files_2024.09.04_amd64.deb">base-files</a></td>
               <td>2024.09.04</td>
               <td>OpenBosniana OS base system miscellaneous files</td>
-              <td>2024-12-08 13:37:05</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/b/base-passwd/base-passwd_3.6.1_amd64.deb">base-passwd</a></td>
               <td>3.6.1</td>
               <td>Debian base system master password and group files</td>
-              <td>2024-12-08 13:37:05</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/b/bash/bash_5.2.15-2+b7_amd64.deb">bash</a></td>
               <td>5.2.15-2+b7</td>
               <td>GNU Bourne Again SHell</td>
-              <td>2024-12-08 13:37:05</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/b/bash-completion/bash-completion_2.11-6_all.deb">bash-completion</a></td>
               <td>1:2.11-6</td>
               <td>programmable completion for the bash shell</td>
-              <td>2024-12-08 13:37:05</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/b/bc/bc_1.07.1-3+b1_amd64.deb">bc</a></td>
               <td>1.07.1-3+b1</td>
               <td>GNU bc arbitrary precision calculator language</td>
-              <td>2024-12-08 13:37:05</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/b/bind9/bind9-dnsutils_9.18.28-1~deb12u2_amd64.deb">bind9-dnsutils</a></td>
               <td>1:9.18.28-1~deb12u2</td>
               <td>Clients provided with BIND 9</td>
-              <td>2024-12-08 13:37:05</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/b/bind9/bind9-host_9.18.28-1~deb12u2_amd64.deb">bind9-host</a></td>
               <td>1:9.18.28-1~deb12u2</td>
               <td>DNS Lookup Utility</td>
-              <td>2024-12-08 13:37:05</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/b/bind9/bind9-libs_9.18.28-1~deb12u2_amd64.deb">bind9-libs</a></td>
               <td>1:9.18.28-1~deb12u2</td>
               <td>Shared Libraries used by BIND 9</td>
-              <td>2024-12-08 13:37:05</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/b/binutils/binutils_2.40-2_amd64.deb">binutils</a></td>
               <td>2.40-2</td>
               <td>GNU assembler, linker and binary utilities</td>
-              <td>2024-12-08 13:37:05</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/b/binutils/binutils-common_2.40-2_amd64.deb">binutils-common</a></td>
               <td>2.40-2</td>
               <td>Common files for the GNU assembler, linker and binary utilities</td>
-              <td>2024-12-08 13:37:05</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/b/binutils/binutils-x86-64-linux-gnu_2.40-2_amd64.deb">binutils-x86-64-linux-gnu</a></td>
               <td>2.40-2</td>
               <td>GNU binary utilities, for x86-64-linux-gnu target</td>
-              <td>2024-12-08 13:37:05</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/b/bleachbit/bleachbit_4.4.2-1_all.deb">bleachbit</a></td>
               <td>4.4.2-1</td>
               <td>delete unnecessary files from the system</td>
-              <td>2024-12-08 13:37:05</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/b/blends/blends-tasks_0.7.5_all.deb">blends-tasks</a></td>
               <td>0.7.5</td>
               <td>Debian Pure Blends tasks for new installations</td>
-              <td>2024-12-08 13:37:05</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/b/bluedevil/bluedevil_5.27.5-2_amd64.deb">bluedevil</a></td>
               <td>4:5.27.5-2</td>
               <td>KDE Bluetooth stack</td>
-              <td>2024-12-08 13:37:05</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/b/blueman/blueman_2.3.5-2+b1_amd64.deb">blueman</a></td>
               <td>2.3.5-2+b1</td>
               <td>Graphical bluetooth manager</td>
-              <td>2024-12-08 13:37:05</td>
+              <td>2024-12-08 13:57:38</td>
             </tr>
 
         </tbody>
@@ -648,10 +648,10 @@
     <section id="sponsor">
       <div class="sponsor">
         <div class="linija-dole mb-1"></div>
-        <p style="letter-spacing:1px;" class="pb-1 pt-1 text-white text-center">{{ site.data.strings.footnote-dev | replace: '[OpenBosniana OS]', '
-													<a href="##">OpenBosniana OS</a>' | replace: '[bosniana.org]', '
-													<a href="##">bosniana.org</a>' | replace: '[Denis Maslo]', '
-													<a href="##">Denis Maslo</a>' }}
+        <p style="letter-spacing:1px;" class="pb-1 pt-1 text-white text-center">
+													<a href="##">OpenBosniana OS</a> and
+													<a href="##">bosniana.org</a> developed by:
+													<a href="##">Denis Maslo</a>
         </p>
 
         <p style="letter-spacing:1px;" class="pb-1 pt-1 text-white text-center"><i class="ri-mail-send-line"></i> Private email:
